@@ -19,20 +19,26 @@
 
 package org.apache.druid.query.aggregation.datasketches.hll;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.apache.datasketches.hll.HllSketch;
+import org.apache.druid.data.input.ColumnsFilter;
+import org.apache.druid.data.input.InputRowSchema;
 import org.apache.druid.data.input.MapBasedRow;
+import org.apache.druid.data.input.impl.DelimitedInputFormat;
+import org.apache.druid.data.input.impl.DimensionsSpec;
+import org.apache.druid.data.input.impl.TimestampSpec;
+import org.apache.druid.java.util.common.FileUtils;
 import org.apache.druid.java.util.common.Intervals;
 import org.apache.druid.java.util.common.StringEncoding;
 import org.apache.druid.java.util.common.granularity.Granularities;
-import org.apache.druid.java.util.common.granularity.Granularity;
 import org.apache.druid.java.util.common.guava.Sequence;
+import org.apache.druid.query.Druids;
 import org.apache.druid.query.QueryContexts;
 import org.apache.druid.query.Result;
 import org.apache.druid.query.aggregation.AggregationTestHelper;
+import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.aggregation.hyperloglog.HyperUniquesAggregatorFactory;
 import org.apache.druid.query.aggregation.post.FieldAccessPostAggregator;
 import org.apache.druid.query.groupby.GroupByQuery;
 import org.apache.druid.query.groupby.GroupByQueryConfig;
@@ -40,53 +46,48 @@ import org.apache.druid.query.groupby.GroupByQueryRunnerTest;
 import org.apache.druid.query.groupby.ResultRow;
 import org.apache.druid.query.groupby.epinephelinae.GroupByTestColumnSelectorFactory;
 import org.apache.druid.query.groupby.epinephelinae.GrouperTestUtil;
+import org.apache.druid.query.timeseries.TimeseriesQuery;
 import org.apache.druid.query.timeseries.TimeseriesResultValue;
 import org.apache.druid.testing.InitializedNullHandlingTest;
-import org.junit.Assert;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
-@RunWith(Parameterized.class)
 public class HllSketchAggregatorTest extends InitializedNullHandlingTest
 {
   private static final boolean ROUND = true;
 
-  private final AggregationTestHelper groupByHelper;
-  private final AggregationTestHelper timeseriesHelper;
-  private final QueryContexts.Vectorize vectorize;
-  private final StringEncoding stringEncoding;
+  private AggregationTestHelper groupByHelper;
+  private AggregationTestHelper timeseriesHelper;
+  private QueryContexts.Vectorize vectorize;
+  private StringEncoding stringEncoding;
 
-  @Rule
-  public final TemporaryFolder groupByFolder = new TemporaryFolder();
+  @TempDir
+  private File groupByFolder;
 
-  @Rule
-  public final TemporaryFolder timeseriesFolder = new TemporaryFolder();
+  @TempDir
+  private File timeseriesFolder;
 
-  public HllSketchAggregatorTest(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding)
+  public void initHllSketchAggregatorTest(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding)
   {
     HllSketchModule.registerSerde();
     groupByHelper = AggregationTestHelper.createGroupByQueryAggregationTestHelper(
         new HllSketchModule().getJacksonModules(), config, groupByFolder
     );
-    timeseriesHelper = AggregationTestHelper.createTimeseriesQueryAggregationTestHelper(
+    timeseriesHelper = AggregationTestHelper.createTimeseriesQueryAggregationTestHelperWithTempDir(
         new HllSketchModule().getJacksonModules(), timeseriesFolder
     );
     this.vectorize = QueryContexts.Vectorize.fromString(vectorize);
     this.stringEncoding = stringEncoding;
   }
 
-  @Parameterized.Parameters(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
   public static Collection<?> constructorFeeder()
   {
     final List<Object[]> constructors = new ArrayList<>();
@@ -102,302 +103,298 @@ public class HllSketchAggregatorTest extends InitializedNullHandlingTest
     return constructors;
   }
 
-  @Test
-  public void ingestSketches() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void ingestSketches(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_sketches.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim"),
-            Arrays.asList("timestamp", "dim", "multiDim", "sketch")
-        ),
-        buildAggregatorJson("HLLSketchMerge", "sketch", !ROUND, stringEncoding),
+        buildInputRowSchema(List.of("dim", "multiDim")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "sketch")),
+        buildMergeAggregatorList("sketch", !ROUND, stringEncoding),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildGroupByQueryJson("HLLSketchMerge", "sketch", !ROUND, stringEncoding)
+        buildGroupByQuery("HLLSketchMerge", "sketch", !ROUND, stringEncoding)
     );
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(200, (double) row.get(0), 0.1);
+    Assertions.assertEquals(200, (double) row.get(0), 0.1);
   }
 
-  @Test
-  public void ingestSketchesTimeseries() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void ingestSketchesTimeseries(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     final File inputFile = new File(this.getClass().getClassLoader().getResource("hll/hll_sketches.tsv").getFile());
-    final String parserJson = buildParserJson(
-        Arrays.asList("dim", "multiDim"),
-        Arrays.asList("timestamp", "dim", "multiDim", "sketch")
-    );
-    final String aggregators =
-        buildAggregatorJson("HLLSketchMerge", "sketch", !ROUND, HllSketchAggregatorFactory.DEFAULT_STRING_ENCODING);
+    final InputRowSchema inputRowSchema = buildInputRowSchema(List.of("dim", "multiDim"));
+    final DelimitedInputFormat inputFormat = buildInputFormat(List.of("timestamp", "dim", "multiDim", "sketch"));
+    final List<AggregatorFactory> aggregators =
+        buildMergeAggregatorList("sketch", !ROUND, HllSketchAggregatorFactory.DEFAULT_STRING_ENCODING);
     final int minTimestamp = 0;
-    final Granularity gran = Granularities.NONE;
     final int maxRowCount = 10;
-    final String queryJson = buildTimeseriesQueryJson("HLLSketchMerge", "sketch", !ROUND);
 
-    File segmentDir1 = timeseriesFolder.newFolder();
+    File segmentDir1 = FileUtils.createTempDirInLocation(timeseriesFolder.toPath(), "hll");
     timeseriesHelper.createIndex(
         inputFile,
-        parserJson,
+        inputRowSchema,
+        inputFormat,
         aggregators,
         segmentDir1,
         minTimestamp,
-        gran,
+        Granularities.NONE,
         maxRowCount,
         true
     );
 
-    File segmentDir2 = timeseriesFolder.newFolder();
+    File segmentDir2 = FileUtils.createTempDirInLocation(timeseriesFolder.toPath(), "hll");
     timeseriesHelper.createIndex(
         inputFile,
-        parserJson,
+        inputRowSchema,
+        inputFormat,
         aggregators,
         segmentDir2,
         minTimestamp,
-        gran,
+        Granularities.NONE,
         maxRowCount,
         true
     );
 
-    Sequence<Result> seq = timeseriesHelper.runQueryOnSegments(Arrays.asList(segmentDir1, segmentDir2), queryJson);
-    List<Result> results = seq.toList();
-    Assert.assertEquals(1, results.size());
-    Result row = results.get(0);
-    Assert.assertEquals(200, (double) ((TimeseriesResultValue) row.getValue()).getMetric("sketch"), 0.1);
+    Sequence<Result<TimeseriesResultValue>> seq = timeseriesHelper.runQueryOnSegments(
+        Arrays.asList(segmentDir1, segmentDir2),
+        buildTimeseriesQuery("HLLSketchMerge", "sketch", !ROUND)
+    );
+    List<Result<TimeseriesResultValue>> results = seq.toList();
+    Assertions.assertEquals(1, results.size());
+    Result<TimeseriesResultValue> row = results.get(0);
+    Assertions.assertEquals(200, (double) row.getValue().getMetric("sketch"), 0.1);
   }
 
-  @Test
-  public void buildSketchesAtIngestionTime() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void buildSketchesAtIngestionTime(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_raw.tsv").getFile()),
-        buildParserJson(
-            Collections.singletonList("dim"),
-            Arrays.asList("timestamp", "dim", "multiDim", "id")
-        ),
-        buildAggregatorJson("HLLSketchBuild", "id", !ROUND, stringEncoding),
+        buildInputRowSchema(List.of("dim")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+        buildBuildAggregatorList("id", !ROUND, stringEncoding),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildGroupByQueryJson("HLLSketchMerge", "sketch", !ROUND, stringEncoding)
+        buildGroupByQuery("HLLSketchMerge", "sketch", !ROUND, stringEncoding)
     );
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(200, (double) row.get(0), 0.1);
+    Assertions.assertEquals(200, (double) row.get(0), 0.1);
   }
 
-  @Test
-  public void buildSketchesAtIngestionTimeTimeseries() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void buildSketchesAtIngestionTimeTimeseries(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
-    Sequence<Result> seq = timeseriesHelper.createIndexAndRunQueryOnSegment(
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
+    Sequence<Result<TimeseriesResultValue>> seq = timeseriesHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_raw.tsv").getFile()),
-        buildParserJson(
-            Collections.singletonList("dim"),
-            Arrays.asList("timestamp", "dim", "multiDim", "id")
-        ),
-        buildAggregatorJson("HLLSketchBuild", "id", !ROUND, stringEncoding),
+        buildInputRowSchema(List.of("dim")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+        buildBuildAggregatorList("id", !ROUND, stringEncoding),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildTimeseriesQueryJson("HLLSketchMerge", "sketch", !ROUND)
+        buildTimeseriesQuery("HLLSketchMerge", "sketch", !ROUND)
     );
-    List<Result> results = seq.toList();
-    Assert.assertEquals(1, results.size());
-    Result row = results.get(0);
-    Assert.assertEquals(200, (double) ((TimeseriesResultValue) row.getValue()).getMetric("sketch"), 0.1);
+    List<Result<TimeseriesResultValue>> results = seq.toList();
+    Assertions.assertEquals(1, results.size());
+    Result<TimeseriesResultValue> row = results.get(0);
+    Assertions.assertEquals(200, (double) row.getValue().getMetric("sketch"), 0.1);
   }
 
-  @Test
-  public void buildSketchesAtQueryTime() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void buildSketchesAtQueryTime(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_raw.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim", "id"),
-            Arrays.asList("timestamp", "dim", "multiDim", "id")
-        ),
-        "[]",
+        buildInputRowSchema(List.of("dim", "multiDim", "id")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+        List.of(),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildGroupByQueryJson("HLLSketchBuild", "id", !ROUND, stringEncoding)
+        buildGroupByQuery("HLLSketchBuild", "id", !ROUND, stringEncoding)
     );
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(200, (double) row.get(0), 0.1);
+    Assertions.assertEquals(200, (double) row.get(0), 0.1);
   }
 
-  @Test
-  public void buildSketchesAtQueryTimeTimeseries() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void buildSketchesAtQueryTimeTimeseries(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
-    Sequence<Result> seq = timeseriesHelper.createIndexAndRunQueryOnSegment(
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
+    Sequence<Result<TimeseriesResultValue>> seq = timeseriesHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_raw.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim", "id"),
-            Arrays.asList("timestamp", "dim", "multiDim", "id")
-        ),
-        "[]",
+        buildInputRowSchema(List.of("dim", "multiDim", "id")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+        List.of(),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildTimeseriesQueryJson("HLLSketchBuild", "id", !ROUND)
+        buildTimeseriesQuery("HLLSketchBuild", "id", !ROUND)
     );
-    List<Result> results = seq.toList();
-    Assert.assertEquals(1, results.size());
-    Result row = results.get(0);
-    Assert.assertEquals(200, (double) ((TimeseriesResultValue) row.getValue()).getMetric("sketch"), 0.1);
+    List<Result<TimeseriesResultValue>> results = seq.toList();
+    Assertions.assertEquals(1, results.size());
+    Result<TimeseriesResultValue> row = results.get(0);
+    Assertions.assertEquals(200, (double) row.getValue().getMetric("sketch"), 0.1);
   }
 
-  @Test
-  public void unsuccessfulComplexTypesInHLL() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void unsuccessfulComplexTypesInHLL(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
-    String metricSpec = "[{"
-                        + "\"type\": \"hyperUnique\","
-                        + "\"name\": \"index_hll\","
-                        + "\"fieldName\": \"id\""
-                        + "}]";
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     try {
       Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
           new File(this.getClass().getClassLoader().getResource("hll/hll_sketches.tsv").getFile()),
-          buildParserJson(
-              Arrays.asList("dim", "multiDim", "id"),
-              Arrays.asList("timestamp", "dim", "multiDim", "id")
-          ),
-          metricSpec,
+          buildInputRowSchema(List.of("dim", "multiDim", "id")),
+          buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+          List.of(new HyperUniquesAggregatorFactory("index_hll", "id")),
           0, // minTimestamp
           Granularities.NONE,
           200, // maxRowCount
-          buildGroupByQueryJson("HLLSketchMerge", "sketch", ROUND, stringEncoding)
+          buildGroupByQuery("HLLSketchMerge", "sketch", ROUND, stringEncoding)
       );
     }
     catch (RuntimeException e) {
-      Assert.assertTrue(
+      Assertions.assertTrue(
           e.getMessage().contains("Invalid input [index_hll] of type [COMPLEX<hyperUnique>] for [HLLSketchBuild]"));
     }
   }
 
-  @Test
-  public void buildSketchesAtQueryTimeMultiValue() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void buildSketchesAtQueryTimeMultiValue(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_raw.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim", "id"),
-            Arrays.asList("timestamp", "dim", "multiDim", "id")
-        ),
-        "[]",
+        buildInputRowSchema(List.of("dim", "multiDim", "id")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+        List.of(),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildGroupByQueryJson("HLLSketchBuild", "multiDim", !ROUND, stringEncoding)
+        buildGroupByQuery("HLLSketchBuild", "multiDim", !ROUND, stringEncoding)
     );
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(14, (double) row.get(0), 0.1);
+    Assertions.assertEquals(14, (double) row.get(0), 0.1);
   }
 
-  @Test
-  public void roundBuildSketch() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void roundBuildSketch(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_raw.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim", "id"),
-            Arrays.asList("timestamp", "dim", "multiDim", "id")
-        ),
-        "[]",
+        buildInputRowSchema(List.of("dim", "multiDim", "id")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "id")),
+        List.of(),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildGroupByQueryJson("HLLSketchBuild", "id", ROUND, stringEncoding)
+        buildGroupByQuery("HLLSketchBuild", "id", ROUND, stringEncoding)
     );
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(200L, (long) row.get(0));
+    Assertions.assertEquals(200L, (long) row.get(0));
   }
 
-  @Test
-  public void roundMergeSketch() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void roundMergeSketch(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_sketches.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim"),
-            Arrays.asList("timestamp", "dim", "multiDim", "sketch")
-        ),
-        buildAggregatorJson("HLLSketchMerge", "sketch", ROUND, stringEncoding),
+        buildInputRowSchema(List.of("dim", "multiDim")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "sketch")),
+        buildMergeAggregatorList("sketch", ROUND, stringEncoding),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        buildGroupByQueryJson("HLLSketchMerge", "sketch", ROUND, stringEncoding)
+        buildGroupByQuery("HLLSketchMerge", "sketch", ROUND, stringEncoding)
     );
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(200L, (long) row.get(0));
+    Assertions.assertEquals(200L, (long) row.get(0));
   }
 
-  @Test
-  public void testPostAggs() throws Exception
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void testPostAggs(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding) throws Exception
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     Sequence<ResultRow> seq = groupByHelper.createIndexAndRunQueryOnSegment(
         new File(this.getClass().getClassLoader().getResource("hll/hll_sketches.tsv").getFile()),
-        buildParserJson(
-            Arrays.asList("dim", "multiDim"),
-            Arrays.asList("timestamp", "dim", "multiDim", "sketch")
-        ),
-        buildAggregatorJson("HLLSketchMerge", "sketch", ROUND, stringEncoding),
+        buildInputRowSchema(List.of("dim", "multiDim")),
+        buildInputFormat(List.of("timestamp", "dim", "multiDim", "sketch")),
+        buildMergeAggregatorList("sketch", ROUND, stringEncoding),
         0, // minTimestamp
         Granularities.NONE,
         200, // maxRowCount
-        groupByHelper.getObjectMapper().writeValueAsString(
-            GroupByQuery.builder()
-                        .setDataSource("test_datasource")
-                        .setGranularity(Granularities.ALL)
-                        .setInterval(Intervals.ETERNITY)
-                        .setAggregatorSpecs(
-                            new HllSketchMergeAggregatorFactory("sketch", "sketch", null, null, null, null, false)
+        GroupByQuery.builder()
+                    .setDataSource("test_datasource")
+                    .setGranularity(Granularities.ALL)
+                    .setInterval(Intervals.ETERNITY)
+                    .setAggregatorSpecs(
+                        new HllSketchMergeAggregatorFactory("sketch", "sketch", null, null, null, null, false)
+                    )
+                    .setPostAggregatorSpecs(
+                        ImmutableList.of(
+                            new HllSketchToEstimatePostAggregator(
+                                "estimate",
+                                new FieldAccessPostAggregator("f1", "sketch"),
+                                false
+                            ),
+                            new HllSketchToEstimateWithBoundsPostAggregator(
+                                "estimateWithBounds",
+                                new FieldAccessPostAggregator(
+                                    "f1",
+                                    "sketch"
+                                ),
+                                2
+                            ),
+                            new HllSketchToStringPostAggregator(
+                                "summary",
+                                new FieldAccessPostAggregator("f1", "sketch")
+                            ),
+                            new HllSketchUnionPostAggregator(
+                                "union",
+                                ImmutableList.of(new FieldAccessPostAggregator(
+                                    "f1",
+                                    "sketch"
+                                ), new FieldAccessPostAggregator("f2", "sketch")),
+                                null,
+                                null
+                            ),
+                            new FieldAccessPostAggregator("fieldAccess", "sketch")
                         )
-                        .setPostAggregatorSpecs(
-                            ImmutableList.of(
-                                new HllSketchToEstimatePostAggregator(
-                                    "estimate",
-                                    new FieldAccessPostAggregator("f1", "sketch"),
-                                    false
-                                ),
-                                new HllSketchToEstimateWithBoundsPostAggregator(
-                                    "estimateWithBounds",
-                                    new FieldAccessPostAggregator(
-                                        "f1",
-                                        "sketch"
-                                    ),
-                                    2
-                                ),
-                                new HllSketchToStringPostAggregator(
-                                    "summary",
-                                    new FieldAccessPostAggregator("f1", "sketch")
-                                ),
-                                new HllSketchUnionPostAggregator(
-                                    "union",
-                                    ImmutableList.of(new FieldAccessPostAggregator(
-                                        "f1",
-                                        "sketch"
-                                    ), new FieldAccessPostAggregator("f2", "sketch")),
-                                    null,
-                                    null
-                                ),
-                                new FieldAccessPostAggregator("fieldAccess", "sketch")
-                            )
-                        )
-                        .build()
-        )
+                    )
+                    .build()
     );
     final String expectedSummary = "### HLL SKETCH SUMMARY: \n"
                                    + "  Log Config K   : 12\n"
@@ -411,19 +408,21 @@ public class HllSketchAggregatorTest extends InitializedNullHandlingTest
                                    + "  Coupon Count   : 200\n";
 
     List<ResultRow> results = seq.toList();
-    Assert.assertEquals(1, results.size());
+    Assertions.assertEquals(1, results.size());
     ResultRow row = results.get(0);
-    Assert.assertEquals(200, (double) row.get(0), 0.1);
-    Assert.assertEquals(200, (double) row.get(1), 0.1);
-    Assert.assertArrayEquals(new double[]{200, 200, 200}, (double[]) row.get(2), 0.1);
-    Assert.assertEquals(expectedSummary, row.get(3));
+    Assertions.assertEquals(200, (double) row.get(0), 0.1);
+    Assertions.assertEquals(200, (double) row.get(1), 0.1);
+    Assertions.assertArrayEquals(new double[]{200, 200, 200}, (double[]) row.get(2), 0.1);
+    Assertions.assertEquals(expectedSummary, row.get(3));
     // union with self = self
-    Assert.assertEquals(expectedSummary, ((HllSketchHolder) row.get(4)).getSketch().toString());
+    Assertions.assertEquals(expectedSummary, ((HllSketchHolder) row.get(4)).getSketch().toString());
   }
 
-  @Test
-  public void testRelocation()
+  @MethodSource("constructorFeeder")
+  @ParameterizedTest(name = "groupByConfig = {0}, vectorize = {1}, stringEncoding = {2}")
+  public void testRelocation(GroupByQueryConfig config, String vectorize, StringEncoding stringEncoding)
   {
+    initHllSketchAggregatorTest(config, vectorize, stringEncoding);
     final GroupByTestColumnSelectorFactory columnSelectorFactory = GrouperTestUtil.newColumnSelectorFactory();
     HllSketchHolder sketchHolder = new HllSketchHolder(null, new HllSketch());
     sketchHolder.getSketch().update(1);
@@ -434,132 +433,101 @@ public class HllSketchAggregatorTest extends InitializedNullHandlingTest
         columnSelectorFactory,
         HllSketchHolder.class
     );
-    Assert.assertEquals(holders[0].getEstimate(), holders[1].getEstimate(), 0);
+    Assertions.assertEquals(holders[0].getEstimate(), holders[1].getEstimate(), 0);
   }
 
-  private static String buildParserJson(List<String> dimensions, List<String> columns)
+  private static InputRowSchema buildInputRowSchema(List<String> dimensions)
   {
-    Map<String, Object> timestampSpec = ImmutableMap.of(
-        "column", "timestamp",
-        "format", "yyyyMMdd"
+    return new InputRowSchema(
+        new TimestampSpec("timestamp", "yyyyMMdd", null),
+        new DimensionsSpec(DimensionsSpec.getDefaultSchemas(dimensions)),
+        ColumnsFilter.all()
     );
-    Map<String, Object> dimensionsSpec = ImmutableMap.of(
-        "dimensions", dimensions,
-        "dimensionExclusions", Collections.emptyList(),
-        "spatialDimensions", Collections.emptyList()
-    );
-    Map<String, Object> parseSpec = ImmutableMap.of(
-        "format", "tsv",
-        "timestampSpec", timestampSpec,
-        "dimensionsSpec", dimensionsSpec,
-        "columns", columns,
-        "listDelimiter", ","
-    );
-    Map<String, Object> object = ImmutableMap.of(
-        "type", "string",
-        "parseSpec", parseSpec
-    );
-    return toJson(object);
   }
 
-  private static String toJson(Object object)
+  private static DelimitedInputFormat buildInputFormat(List<String> columns)
   {
-    final String json;
-    try {
-      ObjectMapper objectMapper = new ObjectMapper();
-      json = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(object);
-    }
-    catch (JsonProcessingException e) {
-      throw new RuntimeException(e);
-    }
-    return json;
+    return new DelimitedInputFormat(columns, ",", null, null, null, 0, null);
   }
 
-  private static String buildAggregatorJson(
-      String aggregationType,
-      String aggregationFieldName,
-      boolean aggregationRound,
+  private static List<AggregatorFactory> buildMergeAggregatorList(
+      String fieldName,
+      boolean round,
       StringEncoding stringEncoding
   )
   {
-    Map<String, Object> aggregator = buildAggregatorObject(
-        aggregationType,
-        aggregationFieldName,
-        aggregationRound,
-        stringEncoding
-    );
-    return toJson(Collections.singletonList(aggregator));
+    return List.of(new HllSketchMergeAggregatorFactory("sketch", fieldName, null, "HLL_8", stringEncoding, null, round));
   }
 
-  private static Map<String, Object> buildAggregatorObject(
-      String aggregationType,
-      String aggregationFieldName,
-      boolean aggregationRound,
+  private static List<AggregatorFactory> buildBuildAggregatorList(
+      String fieldName,
+      boolean round,
       StringEncoding stringEncoding
   )
   {
-    return ImmutableMap.<String, Object>builder()
-                       .put("type", aggregationType)
-                       .put("name", "sketch")
-                       .put("fieldName", aggregationFieldName)
-                       .put("round", aggregationRound)
-                       .put("tgtHllType", "HLL_8")
-                       .put("stringEncoding", stringEncoding.toString())
+    return List.of(new HllSketchBuildAggregatorFactory("sketch", fieldName, null, "HLL_8", stringEncoding, null, round));
+  }
+
+  private GroupByQuery buildGroupByQuery(
+      String aggregationType,
+      String fieldName,
+      boolean round,
+      StringEncoding stringEncoding
+  )
+  {
+    final HllSketchAggregatorFactory agg;
+    if ("HLLSketchMerge".equals(aggregationType)) {
+      agg = new HllSketchMergeAggregatorFactory("sketch", fieldName, null, "HLL_8", stringEncoding, null, round);
+    } else {
+      agg = new HllSketchBuildAggregatorFactory("sketch", fieldName, null, "HLL_8", stringEncoding, null, round);
+    }
+    return GroupByQuery.builder()
+                       .setDataSource("test_dataSource")
+                       .setGranularity(Granularities.ALL)
+                       .setInterval(Intervals.of("2017-01-01T00:00:00.000Z/2017-01-31T00:00:00.000Z"))
+                       .setAggregatorSpecs(agg)
+                       .setPostAggregatorSpecs(
+                           new FieldAccessPostAggregator("sketch_raw", "sketch")
+                       )
+                       .setContext(ImmutableMap.of(QueryContexts.VECTORIZE_KEY, vectorize.toString()))
                        .build();
   }
 
-  private String buildGroupByQueryJson(
+  private TimeseriesQuery buildTimeseriesQuery(
       String aggregationType,
-      String aggregationFieldName,
-      boolean aggregationRound,
-      StringEncoding stringEncoding
+      String fieldName,
+      boolean round
   )
   {
-    Map<String, Object> aggregation = buildAggregatorObject(
-        aggregationType,
-        aggregationFieldName,
-        aggregationRound,
-        stringEncoding
-    );
-    Map<String, Object> object = new ImmutableMap.Builder<String, Object>()
-        .put("queryType", "groupBy")
-        .put("dataSource", "test_dataSource")
-        .put("granularity", "ALL")
-        .put("dimensions", Collections.emptyList())
-        .put("aggregations", Collections.singletonList(aggregation))
-        .put(
-            "postAggregations",
-            Collections.singletonList(
-                ImmutableMap.of("type", "fieldAccess", "name", "sketch_raw", "fieldName", "sketch")
-            )
-        )
-        .put("intervals", Collections.singletonList("2017-01-01T00:00:00.000Z/2017-01-31T00:00:00.000Z"))
-        .put("context", ImmutableMap.of(QueryContexts.VECTORIZE_KEY, vectorize.toString()))
-        .build();
-    return toJson(object);
-  }
-
-  private String buildTimeseriesQueryJson(
-      String aggregationType,
-      String aggregationFieldName,
-      boolean aggregationRound
-  )
-  {
-    Map<String, Object> aggregation = buildAggregatorObject(
-        aggregationType,
-        aggregationFieldName,
-        aggregationRound,
-        HllSketchAggregatorFactory.DEFAULT_STRING_ENCODING
-    );
-    Map<String, Object> object = new ImmutableMap.Builder<String, Object>()
-        .put("queryType", "timeseries")
-        .put("dataSource", "test_dataSource")
-        .put("granularity", "ALL")
-        .put("aggregations", Collections.singletonList(aggregation))
-        .put("intervals", Collections.singletonList("2017-01-01T00:00:00.000Z/2017-01-31T00:00:00.000Z"))
-        .put("context", ImmutableMap.of(QueryContexts.VECTORIZE_KEY, vectorize.toString()))
-        .build();
-    return toJson(object);
+    final HllSketchAggregatorFactory agg;
+    if ("HLLSketchMerge".equals(aggregationType)) {
+      agg = new HllSketchMergeAggregatorFactory(
+          "sketch",
+          fieldName,
+          null,
+          "HLL_8",
+          HllSketchAggregatorFactory.DEFAULT_STRING_ENCODING,
+          null,
+          round
+      );
+    } else {
+      agg = new HllSketchBuildAggregatorFactory(
+          "sketch",
+          fieldName,
+          null,
+          "HLL_8",
+          HllSketchAggregatorFactory.DEFAULT_STRING_ENCODING,
+          null,
+          round
+      );
+    }
+    return Druids.newTimeseriesQueryBuilder()
+                 .dataSource("test_dataSource")
+                 .granularity(Granularities.ALL)
+                 .intervals(Intervals.of("2017-01-01T00:00:00.000Z/2017-01-31T00:00:00.000Z").toString())
+                 .aggregators(agg)
+                 .context(ImmutableMap.of(QueryContexts.VECTORIZE_KEY, vectorize.toString()))
+                 .build();
   }
 
 }
