@@ -26,12 +26,10 @@ import com.google.common.collect.ImmutableSet;
 import org.apache.druid.client.indexing.SamplerResponse;
 import org.apache.druid.data.input.InputFormat;
 import org.apache.druid.data.input.impl.ByteEntity;
-import org.apache.druid.data.input.impl.DimensionsSpec;
 import org.apache.druid.data.input.impl.FloatDimensionSchema;
-import org.apache.druid.data.input.impl.JSONParseSpec;
+import org.apache.druid.data.input.impl.JsonInputFormat;
 import org.apache.druid.data.input.impl.LongDimensionSchema;
 import org.apache.druid.data.input.impl.StringDimensionSchema;
-import org.apache.druid.data.input.impl.StringInputRowParser;
 import org.apache.druid.data.input.impl.TimestampSpec;
 import org.apache.druid.indexer.granularity.UniformGranularitySpec;
 import org.apache.druid.indexing.overlord.sampler.InputSourceSampler;
@@ -44,11 +42,11 @@ import org.apache.druid.indexing.seekablestream.supervisor.IdleConfig;
 import org.apache.druid.indexing.seekablestream.supervisor.LagAggregator;
 import org.apache.druid.indexing.seekablestream.supervisor.SeekableStreamSupervisorIOConfig;
 import org.apache.druid.indexing.seekablestream.supervisor.SeekableStreamSupervisorSpec;
+import org.apache.druid.indexing.seekablestream.supervisor.SupervisorIOConfigBuilder;
 import org.apache.druid.indexing.seekablestream.supervisor.autoscaler.AutoScalerConfig;
 import org.apache.druid.jackson.DefaultObjectMapper;
 import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.common.granularity.Granularities;
-import org.apache.druid.java.util.common.parsers.JSONPathSpec;
 import org.apache.druid.query.aggregation.CountAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleSumAggregatorFactory;
 import org.apache.druid.segment.indexing.DataSchema;
@@ -56,19 +54,18 @@ import org.easymock.EasyMock;
 import org.easymock.EasyMockSupport;
 import org.joda.time.DateTime;
 import org.joda.time.Period;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 
 import javax.annotation.Nullable;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Map;
+import java.util.concurrent.TimeUnit;
 
 public class SeekableStreamSamplerSpecTest extends EasyMockSupport
 {
-  private static final ObjectMapper OBJECT_MAPPER = new DefaultObjectMapper();
   private static final String STREAM = "sampling";
   private static final String SHARD_ID = "1";
 
@@ -98,44 +95,38 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
     );
   }
 
-  @Test(timeout = 10_000L)
+  @Test
+  @Timeout(value = 10, unit = TimeUnit.SECONDS)
   public void testSampleWithInputRowParser() throws Exception
   {
     DataSchema dataSchema = DataSchema.builder()
                                       .withDataSource("test_ds")
-                                      .withParserMap(
-                                          OBJECT_MAPPER.convertValue(
-                                              new StringInputRowParser(
-                                                  new JSONParseSpec(
-                                                      new TimestampSpec("timestamp", "iso", null),
-                                                      new DimensionsSpec(
-                                                          Arrays.asList(
-                                                              new StringDimensionSchema("dim1"),
-                                                              new StringDimensionSchema("dim1t"),
-                                                              new StringDimensionSchema("dim2"),
-                                                              new LongDimensionSchema("dimLong"),
-                                                              new FloatDimensionSchema("dimFloat")
-                                                          )
-                                                      ),
-                                                      new JSONPathSpec(true, ImmutableList.of()),
-                                                      ImmutableMap.of(),
-                                                      false
-                                                  )
-                                              ),
-                                              Map.class
+                                      .withTimestamp(new TimestampSpec("timestamp", "iso", null))
+                                      .withDimensions(
+                                          List.of(
+                                              new StringDimensionSchema("dim1"),
+                                              new StringDimensionSchema("dim1t"),
+                                              new StringDimensionSchema("dim2"),
+                                              new LongDimensionSchema("dimLong"),
+                                              new FloatDimensionSchema("dimFloat")
                                           )
                                       )
                                       .withAggregators(
                                           new DoubleSumAggregatorFactory("met1sum", "met1"),
                                           new CountAggregatorFactory("rows")
                                       )
-                                      .withGranularity(new UniformGranularitySpec(Granularities.DAY, Granularities.NONE, null))
-                                      .withObjectMapper(OBJECT_MAPPER)
+                                      .withGranularity(
+                                          new UniformGranularitySpec(
+                                              Granularities.DAY,
+                                              Granularities.NONE,
+                                              null
+                                          )
+                                      )
                                       .build();
 
     final SeekableStreamSupervisorIOConfig supervisorIOConfig = new TestableSeekableStreamSupervisorIOConfig(
         STREAM,
-        null,
+        new JsonInputFormat(null, null, null, null, null),
         null,
         null,
         null,
@@ -178,13 +169,13 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
 
     verifyAll();
 
-    Assert.assertEquals(5, response.getNumRowsRead());
-    Assert.assertEquals(3, response.getNumRowsIndexed());
-    Assert.assertEquals(5, response.getData().size());
+    Assertions.assertEquals(5, response.getNumRowsRead());
+    Assertions.assertEquals(3, response.getNumRowsIndexed());
+    Assertions.assertEquals(5, response.getData().size());
 
     Iterator<SamplerResponse.SamplerResponseRow> it = response.getData().iterator();
 
-    Assert.assertEquals(new SamplerResponse.SamplerResponseRow(
+    Assertions.assertEquals(new SamplerResponse.SamplerResponseRow(
         ImmutableMap.<String, Object>builder()
             .put("timestamp", "2008")
             .put("dim1", "a")
@@ -206,7 +197,7 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
         null,
         null
     ), it.next());
-    Assert.assertEquals(new SamplerResponse.SamplerResponseRow(
+    Assertions.assertEquals(new SamplerResponse.SamplerResponseRow(
         ImmutableMap.<String, Object>builder()
             .put("timestamp", "2009")
             .put("dim1", "b")
@@ -228,7 +219,7 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
         null,
         null
     ), it.next());
-    Assert.assertEquals(new SamplerResponse.SamplerResponseRow(
+    Assertions.assertEquals(new SamplerResponse.SamplerResponseRow(
         ImmutableMap.<String, Object>builder()
             .put("timestamp", "2010")
             .put("dim1", "c")
@@ -250,7 +241,7 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
         null,
         null
     ), it.next());
-    Assert.assertEquals(new SamplerResponse.SamplerResponseRow(
+    Assertions.assertEquals(new SamplerResponse.SamplerResponseRow(
         ImmutableMap.<String, Object>builder()
             .put("timestamp", "246140482-04-24T15:36:27.903Z")
             .put("dim1", "x")
@@ -263,14 +254,14 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
         true,
         "Encountered row with timestamp[246140482-04-24T15:36:27.903Z] that cannot be represented as a long: [{timestamp=246140482-04-24T15:36:27.903Z, dim1=x, dim2=z, dimLong=10, dimFloat=20.0, met1=1.0}]"
     ), it.next());
-    Assert.assertEquals(new SamplerResponse.SamplerResponseRow(
+    Assertions.assertEquals(new SamplerResponse.SamplerResponseRow(
         null,
         null,
         true,
-        "Unable to parse row [unparseable]"
+        "Unable to parse row [unparseable] into JSON"
     ), it.next());
 
-    Assert.assertFalse(it.hasNext());
+    Assertions.assertFalse(it.hasNext());
   }
 
   private static List<ByteEntity> jb(String ts, String dim1, String dim2, String dimLong, String dimFloat, String met1)
@@ -345,8 +336,16 @@ public class SeekableStreamSamplerSpecTest extends EasyMockSupport
           LagAggregator.DEFAULT,
           lateMessageRejectionStartDateTime,
           idleConfig,
+          null,
+          null,
           null
       );
+    }
+
+    @Override
+    public SupervisorIOConfigBuilder<?, ?> toBuilder()
+    {
+      return new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder().copyFromBase(this);
     }
   }
 }
