@@ -56,12 +56,20 @@ import org.apache.druid.msq.util.MultiStageQueryContext;
 import org.apache.druid.query.DruidMetrics;
 import org.apache.druid.query.QueryContext;
 import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.expression.TestExprMacroTable;
+import org.apache.druid.query.filter.NotDimFilter;
+import org.apache.druid.query.filter.NullFilter;
+import org.apache.druid.query.filter.RangeFilter;
 import org.apache.druid.segment.IndexSpec;
+import org.apache.druid.segment.VirtualColumns;
 import org.apache.druid.segment.column.ColumnType;
 import org.apache.druid.segment.column.RowSignature;
+import org.apache.druid.segment.transform.CompactionTransformSpec;
+import org.apache.druid.segment.virtual.ExpressionVirtualColumn;
 import org.apache.druid.sql.calcite.util.CalciteTests;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
+import org.apache.druid.timeline.SegmentDetail;
 import org.apache.druid.timeline.SegmentId;
 import org.apache.druid.timeline.partition.DimensionRangeShardSpec;
 import org.apache.druid.timeline.partition.NumberedShardSpec;
@@ -107,7 +115,7 @@ public class MSQReplaceTest extends MSQTestBase
         {PARALLEL_MERGE, PARALLEL_MERGE_MSQ_CONTEXT},
         {SUPERUSER, SUPERUSER_MSQ_CONTEXT},
         {WITH_REPLACE_LOCK_AND_COMPACTION_STATE, QUERY_CONTEXT_WITH_REPLACE_LOCK_AND_COMPACTION_STATE}
-        };
+    };
     return Arrays.asList(data);
   }
 
@@ -137,7 +145,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo OVERWRITE ALL "
                              + "SELECT __time, m1 "
@@ -228,7 +240,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo OVERWRITE ALL "
                              + "SELECT __time, dim1, m1 "
@@ -308,7 +324,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo OVERWRITE ALL "
                              + "SELECT __time, dim1, m1 "
@@ -324,7 +344,7 @@ public class MSQReplaceTest extends MSQTestBase
                              SegmentId.of("foo", Intervals.ETERNITY, "test", 0)
                          )
                      )
-                     .setExpectedShardSpec(NumberedShardSpec.class)
+                     .setExpectedShardSpec(DimensionRangeShardSpec.class)
                      .setExpectedResultRows(
                          ImmutableList.of(
                              new Object[]{946684800000L, "", 1.0f},
@@ -343,7 +363,7 @@ public class MSQReplaceTest extends MSQTestBase
                      .setExpectedLastCompactionState(
                          expectedCompactionState(
                              context,
-                             Collections.emptyList(),
+                             List.of("v0"),
                              DimensionsSpec.builder()
                                            .setDimensions(
                                                ImmutableList.of(
@@ -353,13 +373,24 @@ public class MSQReplaceTest extends MSQTestBase
                                            )
                                            .setDimensionExclusions(Collections.singletonList("__time"))
                                            .build(),
+                             new CompactionTransformSpec(
+                                 null,
+                                 VirtualColumns.create(
+                                     new ExpressionVirtualColumn(
+                                         "v0",
+                                         "lower(\"dim1\")",
+                                         ColumnType.STRING,
+                                         TestExprMacroTable.INSTANCE
+                                     )
+                                 )
+                             ),
                              GranularityType.ALL,
                              Intervals.ETERNITY
                          )
                      )
                      .verifyResults();
   }
-
+  
   @MethodSource("data")
   @ParameterizedTest(name = "{index}:with context {0}")
   public void testReplaceOnFooWithAllClusteredByExpression(String contextName, Map<String, Object> context)
@@ -390,7 +421,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo OVERWRITE ALL "
                              + "SELECT __time, dim1, m1 "
@@ -476,7 +511,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo OVERWRITE ALL "
                              + "SELECT __time, dim1, m1 "
@@ -602,7 +641,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo OVERWRITE ALL "
                              + "SELECT __time, dim1, m1 "
@@ -1012,7 +1055,11 @@ public class MSQReplaceTest extends MSQTestBase
                              Collections.emptyList(),
                              Collections.singletonList(new StringDimensionSchema("user")),
                              GranularityType.HOUR,
-                             Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z")
+                             Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z"),
+                             new CompactionTransformSpec(
+                                 new RangeFilter("v0", ColumnType.LONG, 1466989200000L, 1466992800000L, false, true, null),
+                                 null
+                             )
                          )
                      )
                      .verifyResults();
@@ -1125,7 +1172,11 @@ public class MSQReplaceTest extends MSQTestBase
     Mockito.doCallRealMethod()
            .doReturn(ImmutableSet.of(existingDataSegment0, existingDataSegment1))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.ETERNITY)));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.ETERNITY),
+               SegmentDetail.none()
+           ));
 
 
     testIngestQuery().setSql(" REPLACE INTO foo "
@@ -1208,7 +1259,11 @@ public class MSQReplaceTest extends MSQTestBase
 
     Mockito.doReturn(ImmutableSet.of(existingDataSegment0))
            .when(testTaskActionClient)
-           .submit(new RetrieveUsedSegmentsAction("foo", ImmutableList.of(Intervals.of("2000-01-01/2000-03-01"))));
+           .submit(new RetrieveUsedSegmentsAction(
+               "foo",
+               ImmutableList.of(Intervals.of("2000-01-01/2000-03-01")),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo "
                              + "OVERWRITE WHERE __time >= TIMESTAMP '2000-01-01' AND __time < TIMESTAMP '2000-03-01' "
@@ -1297,7 +1352,8 @@ public class MSQReplaceTest extends MSQTestBase
            .when(testTaskActionClient)
            .submit(new RetrieveUsedSegmentsAction(
                EasyMock.eq("foo"),
-               EasyMock.eq(ImmutableList.of(Intervals.of("2000-01-01/2002-01-01")))
+               EasyMock.eq(ImmutableList.of(Intervals.of("2000-01-01/2002-01-01"))),
+               SegmentDetail.none()
            ));
 
 
@@ -1477,7 +1533,8 @@ public class MSQReplaceTest extends MSQTestBase
            .when(testTaskActionClient)
            .submit(new RetrieveUsedSegmentsAction(
                EasyMock.eq("foo"),
-               EasyMock.eq(ImmutableList.of(Intervals.of("2000-01-01/2000-03-01")))
+               EasyMock.eq(ImmutableList.of(Intervals.of("2000-01-01/2000-03-01"))),
+               SegmentDetail.none()
            ));
 
     testIngestQuery().setSql(" REPLACE INTO foo "
@@ -1591,7 +1648,8 @@ public class MSQReplaceTest extends MSQTestBase
            .when(testTaskActionClient)
            .submit(new RetrieveUsedSegmentsAction(
                EasyMock.eq("foo"),
-               EasyMock.eq(ImmutableList.of(Intervals.of("2000/2002")))
+               EasyMock.eq(ImmutableList.of(Intervals.of("2000/2002"))),
+               SegmentDetail.none()
            ));
 
     testIngestQuery().setSql(" REPLACE INTO foo "
@@ -1648,7 +1706,11 @@ public class MSQReplaceTest extends MSQTestBase
 
     Mockito.doReturn(ImmutableSet.of(existingDataSegment))
            .when(testTaskActionClient)
-           .submit(ArgumentMatchers.isA(RetrieveUsedSegmentsAction.class));
+           .submit(new RetrieveUsedSegmentsAction(
+               EasyMock.eq("foo"),
+               EasyMock.eq(ImmutableList.of(Intervals.ETERNITY)),
+               SegmentDetail.none()
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo "
                              + "OVERWRITE ALL "
@@ -1724,7 +1786,8 @@ public class MSQReplaceTest extends MSQTestBase
                                  new LongDimensionSchema("cnt")
                              ),
                              GranularityType.DAY,
-                             Intervals.ETERNITY
+                             Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                          )
                      )
                      .verifyResults();
@@ -2074,7 +2137,8 @@ public class MSQReplaceTest extends MSQTestBase
            .when(testTaskActionClient)
            .submit(new RetrieveUsedSegmentsAction(
                EasyMock.eq("foo"),
-               EasyMock.eq(ImmutableList.of(Intervals.of("1999/2002")))
+               EasyMock.eq(ImmutableList.of(Intervals.of("1999/2002"))),
+               SegmentDetail.none()
            ));
 
     testIngestQuery().setSql(" REPLACE INTO foo "
@@ -2153,7 +2217,8 @@ public class MSQReplaceTest extends MSQTestBase
            .when(testTaskActionClient)
            .submit(new RetrieveUsedSegmentsAction(
                EasyMock.eq("foo1"),
-               EasyMock.eq(ImmutableList.of(Intervals.of("2000/2002")))
+               EasyMock.eq(ImmutableList.of(Intervals.of("2000/2002"))),
+               SegmentDetail.none()
            ));
 
     List<Object[]> expectedResults = ImmutableList.of(
@@ -2194,7 +2259,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.QUARTER,
-                         Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z")
+                         Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2274,7 +2340,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2320,7 +2387,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.HOUR,
-                         Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00")
+                         Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2368,7 +2436,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z")
+                         Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2416,7 +2485,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z")
+                         Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2464,7 +2534,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2510,7 +2581,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2556,7 +2628,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2593,12 +2666,10 @@ public class MSQReplaceTest extends MSQTestBase
                      .setExpectedLastCompactionState(expectedCompactionState(
                          context,
                          Collections.emptyList(),
-                         ImmutableList.of(
-                             new StringDimensionSchema("dim1"),
-                             new LongDimensionSchema("cnt")
-                         ),
+                         List.of(new StringDimensionSchema("dim1"), new LongDimensionSchema("cnt")),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2668,7 +2739,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z")
+                         Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2773,15 +2845,55 @@ public class MSQReplaceTest extends MSQTestBase
       List<String> partitionDimensions,
       List<DimensionSchema> dimensions,
       GranularityType segmentGranularity,
+      Interval interval,
+      CompactionTransformSpec transformSpec
+  )
+  {
+    CompactionState state = expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensions,
+        segmentGranularity,
+        interval
+    );
+    return state == null ? null : state.toBuilder().transformSpec(transformSpec).build();
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      List<DimensionSchema> dimensions,
+      GranularityType segmentGranularity,
       Interval interval
   )
   {
     return expectedCompactionState(
         context,
         partitionDimensions,
-        new DimensionsSpec.Builder().setDimensions(dimensions)
-                                    .setDimensionExclusions(Collections.singletonList("__time"))
-                                    .build(),
+        dimensions,
+        null,
+        segmentGranularity,
+        interval
+    );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      List<DimensionSchema> dimensions,
+      CompactionTransformSpec transformSpec,
+      GranularityType segmentGranularity,
+      Interval interval
+  )
+  {
+    return expectedCompactionState(
+        context,
+        partitionDimensions,
+        DimensionsSpec.builder()
+                      .setDimensions(dimensions)
+                      .setDimensionExclusions(Collections.singletonList("__time"))
+                      .build(),
+        transformSpec,
         segmentGranularity,
         interval
     );
@@ -2791,6 +2903,25 @@ public class MSQReplaceTest extends MSQTestBase
       Map<String, Object> context,
       List<String> partitionDimensions,
       DimensionsSpec dimensionsSpec,
+      GranularityType segmentGranularity,
+      Interval interval
+  )
+  {
+    return expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensionsSpec,
+        null,
+        segmentGranularity,
+        interval
+    );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      DimensionsSpec dimensionsSpec,
+      CompactionTransformSpec transformSpec,
       GranularityType segmentGranularity,
       Interval interval
   )
@@ -2814,7 +2945,7 @@ public class MSQReplaceTest extends MSQTestBase
       );
     }
 
-    IndexSpec indexSpec = IndexSpec.DEFAULT;
+    IndexSpec indexSpec = IndexSpec.getDefault().getEffectiveSpec();
     GranularitySpec granularitySpec = new UniformGranularitySpec(
         segmentGranularity.getDefaultGranularity(),
         GranularityType.NONE.getDefaultGranularity(),
@@ -2823,15 +2954,14 @@ public class MSQReplaceTest extends MSQTestBase
     );
     List<AggregatorFactory> metricsSpec = Collections.emptyList();
 
-    return new CompactionState(
-        partitionsSpec,
-        dimensionsSpec,
-        metricsSpec,
-        null,
-        indexSpec,
-        granularitySpec,
-        null
-    );
+    return CompactionState.builder()
+                          .partitionsSpec(partitionsSpec)
+                          .dimensionsSpec(dimensionsSpec)
+                          .metricsSpec(metricsSpec)
+                          .transformSpec(transformSpec)
+                          .indexSpec(indexSpec)
+                          .granularitySpec(granularitySpec)
+                          .build();
 
   }
 }
