@@ -21,31 +21,38 @@ package org.apache.druid.segment.realtime.appenderator;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
 import com.google.common.util.concurrent.ListenableFuture;
 import org.apache.druid.data.input.InputRow;
 import org.apache.druid.data.input.MapBasedInputRow;
+import org.apache.druid.data.input.impl.ClusteredValueGroupsBaseTableProjectionSpec;
+import org.apache.druid.data.input.impl.LongDimensionSchema;
+import org.apache.druid.data.input.impl.StringDimensionSchema;
+import org.apache.druid.data.input.impl.TimestampSpec;
+import org.apache.druid.indexer.granularity.SegmentGranularitySpec;
 import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Intervals;
+import org.apache.druid.java.util.common.granularity.Granularities;
 import org.apache.druid.segment.incremental.RowIngestionMeters;
 import org.apache.druid.segment.incremental.SimpleRowIngestionMeters;
+import org.apache.druid.segment.indexing.DataSchema;
+import org.apache.druid.segment.realtime.SegmentGenerationMetrics;
 import org.apache.druid.testing.InitializedNullHandlingTest;
+import org.apache.druid.timeline.ClusterGroupTuples;
+import org.apache.druid.timeline.DataSegment;
 import org.apache.druid.timeline.partition.LinearShardSpec;
-import org.hamcrest.CoreMatchers;
-import org.hamcrest.MatcherAssert;
 import org.joda.time.DateTime;
 import org.joda.time.Interval;
 import org.joda.time.chrono.ISOChronology;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.internal.matchers.ThrowableCauseMatcher;
-import org.junit.internal.matchers.ThrowableMessageMatcher;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 
 import java.io.File;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 public class BatchAppenderatorTest extends InitializedNullHandlingTest
@@ -63,33 +70,33 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       final Appenderator appenderator = tester.getAppenderator();
 
       // startJob
-      Assert.assertNull(appenderator.startJob());
+      Assertions.assertNull(appenderator.startJob());
 
       // getDataSource
-      Assert.assertEquals(BatchAppenderatorTester.DATASOURCE, appenderator.getDataSource());
+      Assertions.assertEquals(BatchAppenderatorTester.DATASOURCE, appenderator.getDataSource());
 
       // add #1
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null)
                       .getNumRowsInSegment()
       );
 
       // add #2
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 2), null)
                       .getNumRowsInSegment()
       );
 
       // getSegments
-      Assert.assertEquals(
+      Assertions.assertEquals(
           IDENTIFIERS.subList(0, 2),
           appenderator.getSegments().stream().sorted().collect(Collectors.toList())
       );
 
       // add #3, this hits max rows in memory:
-      Assert.assertEquals(
+      Assertions.assertEquals(
           2,
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "sux", 1), null)
                       .getNumRowsInSegment()
@@ -97,38 +104,120 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
 
       // since we just added three rows and the max rows in memory is three, all the segments (sinks etc.)
       // above should be cleared now
-      Assert.assertEquals(
+      Assertions.assertEquals(
           Collections.emptyList(),
           ((BatchAppenderator) appenderator).getInMemorySegments().stream().sorted().collect(Collectors.toList())
       );
 
       // add #4, this will add one more temporary segment:
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "qux", 4), null)
                       .getNumRowsInSegment()
       );
 
       // push all
-      final SegmentsAndCommitMetadata segmentsAndCommitMetadata = appenderator.push(
+      final List<String> segments = appenderator.push(
           appenderator.getSegments(),
           null,
           false
-      ).get();
-      Assert.assertEquals(
-          IDENTIFIERS.subList(0, 3),
-          Lists.transform(
-              segmentsAndCommitMetadata.getSegments(),
-              SegmentIdWithShardSpec::fromDataSegment
-          ).stream().sorted().collect(Collectors.toList())
+      ).get().getSegments().stream().sorted().map(DataSegment::toString).collect(Collectors.toList());
+      Assertions.assertEquals(
+          List.of(
+              DataSegment.builder(IDENTIFIERS.get(0).asSegmentId())
+                         .shardSpec(IDENTIFIERS.get(0).getShardSpec())
+                         .dimensions(List.of("dim"))
+                         .metrics(List.of("count", "met"))
+                         .totalRows(1)
+                         .build()
+                         .toString(),
+              DataSegment.builder(IDENTIFIERS.get(1).asSegmentId())
+                         .shardSpec(IDENTIFIERS.get(1).getShardSpec())
+                         .dimensions(List.of("dim"))
+                         .metrics(List.of("count", "met"))
+                         .totalRows(2)
+                         .build()
+                         .toString(),
+              DataSegment.builder(IDENTIFIERS.get(2).asSegmentId())
+                         .shardSpec(IDENTIFIERS.get(2).getShardSpec())
+                         .dimensions(List.of("dim"))
+                         .metrics(List.of("count", "met"))
+                         .totalRows(1)
+                         .build()
+                         .toString()
+          ), segments
       );
-      Assert.assertEquals(
-          tester.getPushedSegments().stream().sorted().collect(Collectors.toList()),
-          segmentsAndCommitMetadata.getSegments().stream().sorted().collect(Collectors.toList())
+      Assertions.assertEquals(
+          tester.getPushedSegments()
+                .stream()
+                .sorted()
+                .map(DataSegment::toString)
+                .collect(Collectors.toList()),
+          segments
       );
 
+      SegmentGenerationMetrics segmentGenerationMetrics = tester.getMetrics();
+      Assertions.assertEquals(2, segmentGenerationMetrics.numPersists());
+      Assertions.assertEquals(4, segmentGenerationMetrics.rowOutput());
+      Assertions.assertTrue(segmentGenerationMetrics.persistTimeMillis() > 0);
+      Assertions.assertTrue(segmentGenerationMetrics.persistCpuTime() > 0);
+
+      Assertions.assertTrue(segmentGenerationMetrics.mergeTimeMillis() > 0);
+      Assertions.assertTrue(segmentGenerationMetrics.mergeCpuTime() > 0);
+
       appenderator.close();
-      Assert.assertTrue(appenderator.getSegments().isEmpty());
+      Assertions.assertTrue(appenderator.getSegments().isEmpty());
+    }
+  }
+
+  @Test
+  public void testClusteredBaseTablePushPopulatesDimensionsAndClusterGroups() throws Exception
+  {
+    final ClusteredValueGroupsBaseTableProjectionSpec clusterSpec =
+        ClusteredValueGroupsBaseTableProjectionSpec.builder()
+            .columns(
+                new StringDimensionSchema("tenant"),
+                new StringDimensionSchema("region"),
+                new LongDimensionSchema("__time")
+            )
+            .clusteringColumns("tenant")
+            .build();
+    final DataSchema clusteredSchema = DataSchema.builder()
+                                                 .withDataSource(BatchAppenderatorTester.DATASOURCE)
+                                                 .withTimestamp(new TimestampSpec("ts", "auto", null))
+                                                 .withSegmentGranularity(new SegmentGranularitySpec(Granularities.MINUTE, null))
+                                                 .withBaseTable(clusterSpec)
+                                                 .build();
+
+    try (final BatchAppenderatorTester tester = new BatchAppenderatorTester(100, clusteredSchema, true)) {
+      final Appenderator appenderator = tester.getAppenderator();
+      appenderator.startJob();
+      appenderator.add(IDENTIFIERS.get(0), createClusterRow("2000", "acme", "us-east-1"), null);
+      appenderator.add(IDENTIFIERS.get(0), createClusterRow("2000", "acme", "us-west-2"), null);
+      appenderator.add(IDENTIFIERS.get(0), createClusterRow("2000", "globex", "eu-west-1"), null);
+
+      appenderator.push(appenderator.getSegments(), null, false).get();
+
+      final List<DataSegment> pushed = tester.getPushedSegments();
+      Assertions.assertEquals(1, pushed.size());
+      final DataSegment segment = pushed.get(0);
+
+      // Empty-dimensions follow-up: clustered segments source their published dimensions from the cluster summary
+      // (clustering + non-clustering, in summary column order), not the empty top-level columns.
+      Assertions.assertEquals(List.of("tenant", "region"), segment.getDimensions());
+
+      // clusterGroups is populated at publish time from the merged segment's cluster summary.
+      final ClusterGroupTuples groups = segment.getClusterGroups();
+      Assertions.assertNotNull(groups);
+      Assertions.assertEquals(List.of("tenant"), groups.clusteringColumns().getColumnNames());
+      Assertions.assertEquals(
+          List.of(
+              Collections.singletonList("acme"),
+              Collections.singletonList("globex")
+          ),
+          groups.tuples()
+      );
+      appenderator.close();
     }
   }
 
@@ -139,33 +228,33 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       final Appenderator appenderator = tester.getAppenderator();
 
       // startJob
-      Assert.assertNull(appenderator.startJob());
+      Assertions.assertNull(appenderator.startJob());
 
       // getDataSource
-      Assert.assertEquals(BatchAppenderatorTester.DATASOURCE, appenderator.getDataSource());
+      Assertions.assertEquals(BatchAppenderatorTester.DATASOURCE, appenderator.getDataSource());
 
       // add #1
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null)
                       .getNumRowsInSegment()
       );
 
       // add #2
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 2), null)
                       .getNumRowsInSegment()
       );
 
       // getSegments
-      Assert.assertEquals(
+      Assertions.assertEquals(
           IDENTIFIERS.subList(0, 2),
           appenderator.getSegments().stream().sorted().collect(Collectors.toList())
       );
 
       // add #3, this hits max rows in memory:
-      Assert.assertEquals(
+      Assertions.assertEquals(
           2,
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "sux", 1), null)
                       .getNumRowsInSegment()
@@ -173,13 +262,13 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
 
       // since we just added three rows and the max rows in memory is three, all the segments (sinks etc.)
       // above should be cleared now
-      Assert.assertEquals(
+      Assertions.assertEquals(
           Collections.emptyList(),
           ((BatchAppenderator) appenderator).getInMemorySegments().stream().sorted().collect(Collectors.toList())
       );
 
       // add #4, this will add one more temporary segment:
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "qux", 4), null)
                       .getNumRowsInSegment()
@@ -192,21 +281,17 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
           false
       );
 
-      final ExecutionException e = Assert.assertThrows(
+      final ExecutionException e = Assertions.assertThrows(
           ExecutionException.class,
           segmentsAndCommitMetadata::get
       );
 
-      MatcherAssert.assertThat(
-          e,
-          ThrowableCauseMatcher.hasCause(ThrowableCauseMatcher.hasCause(CoreMatchers.instanceOf(IOException.class)))
-      );
+      final Throwable nestedCause = e.getCause().getCause();
+      Assertions.assertTrue(nestedCause instanceof IOException);
+      Assertions.assertTrue(nestedCause.getMessage().startsWith("Push failure test"));
 
-      MatcherAssert.assertThat(
-          e,
-          ThrowableCauseMatcher.hasCause(ThrowableCauseMatcher.hasCause(ThrowableMessageMatcher.hasMessage(
-              CoreMatchers.startsWith("Push failure test"))))
-      );
+      SegmentGenerationMetrics segmentGenerationMetrics = tester.getMetrics();
+      Assertions.assertEquals(1, segmentGenerationMetrics.failedHandoffs());
     }
   }
 
@@ -222,24 +307,24 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       final Appenderator appenderator = tester.getAppenderator();
 
       // startJob
-      Assert.assertNull(appenderator.startJob());
+      Assertions.assertNull(appenderator.startJob());
 
       // getDataSource
-      Assert.assertEquals(BatchAppenderatorTester.DATASOURCE, appenderator.getDataSource());
+      Assertions.assertEquals(BatchAppenderatorTester.DATASOURCE, appenderator.getDataSource());
 
       // Create a segment identifier with a non-utc interval
       SegmentIdWithShardSpec segmentIdWithNonUTCTime =
           createNonUTCSegmentId("2021-06-27T00:00:00.000+09:00/2021-06-28T00:00:00.000+09:00",
                           "A", 0); // should be in seg_0
 
-      Assert.assertEquals(
+      Assertions.assertEquals(
           1,
           appenderator.add(segmentIdWithNonUTCTime, createInputRow("2021-06-27T00:01:11.080Z", "foo", 1), null)
                       .getNumRowsInSegment()
       );
 
       // getSegments
-      Assert.assertEquals(
+      Assertions.assertEquals(
           Collections.singletonList(segmentIdWithNonUTCTime),
           appenderator.getSegments().stream().sorted().collect(Collectors.toList())
       );
@@ -247,32 +332,35 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
 
       // since we just added one row and the max rows in memory is one, all the segments (sinks etc)
       // above should be cleared now
-      Assert.assertEquals(
+      Assertions.assertEquals(
           Collections.emptyList(),
           ((BatchAppenderator) appenderator).getInMemorySegments().stream().sorted().collect(Collectors.toList())
       );
 
 
       // push all
-      final SegmentsAndCommitMetadata segmentsAndCommitMetadata = appenderator.push(
+      final List<String> segments = appenderator.push(
           appenderator.getSegments(),
           null,
           false
-      ).get();
-      Assert.assertEquals(
-          Collections.singletonList(segmentIdWithNonUTCTime),
-          Lists.transform(
-              segmentsAndCommitMetadata.getSegments(),
-              SegmentIdWithShardSpec::fromDataSegment
-          ).stream().sorted().collect(Collectors.toList())
+      ).get().getSegments().stream().sorted().map(DataSegment::toString).collect(Collectors.toList());
+      Assertions.assertEquals(
+          List.of(DataSegment.builder(segmentIdWithNonUTCTime.asSegmentId())
+                             .shardSpec(segmentIdWithNonUTCTime.getShardSpec())
+                             .dimensions(List.of("dim"))
+                             .metrics(List.of("count", "met"))
+                             .totalRows(1)
+                             .build()
+                             .toString()),
+          segments
       );
-      Assert.assertEquals(
-          tester.getPushedSegments().stream().sorted().collect(Collectors.toList()),
-          segmentsAndCommitMetadata.getSegments().stream().sorted().collect(Collectors.toList())
+      Assertions.assertEquals(
+          tester.getPushedSegments().stream().sorted().map(DataSegment::toString).collect(Collectors.toList()),
+          segments
       );
 
       appenderator.close();
-      Assert.assertTrue(appenderator.getSegments().isEmpty());
+      Assertions.assertTrue(appenderator.getSegments().isEmpty());
     }
   }
 
@@ -297,17 +385,17 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       // 44(map overhead) + 28 (TimeAndDims overhead) + 56 (aggregator metrics) + 54 (dimsKeySize) =
       // 182 + 1 byte when null handling is enabled
       int nullHandlingOverhead = 1;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           190 + nullHandlingOverhead,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(
+      Assertions.assertEquals(
           190 + nullHandlingOverhead,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(1))
       );
       appenderator.close();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
     }
   }
 
@@ -330,15 +418,15 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
       //expectedSizeInBytes = 44(map overhead) + 28 (TimeAndDims overhead) + 56 (aggregator metrics) + 54 (dimsKeySize) = 182
       int nullHandlingOverhead = 1;
-      Assert.assertEquals(190 + nullHandlingOverhead, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
+      Assertions.assertEquals(190 + nullHandlingOverhead, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(
+      Assertions.assertEquals(
           380 + 2 * nullHandlingOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
-      Assert.assertEquals(2, appenderator.getSegments().size());
+      Assertions.assertEquals(2, appenderator.getSegments().size());
       appenderator.close();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
     }
   }
 
@@ -356,11 +444,11 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       int currentInMemoryIndexSize = 190 + nullHandlingOverhead;
       int sinkSizeOverhead = BatchAppenderator.ROUGH_OVERHEAD_PER_SINK;
       // currHydrant in the sink still has > 0 bytesInMemory since we do not persist yet
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -374,12 +462,12 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       currentInMemoryIndexSize = 0;
       // We are now over maxSizeInBytes after the add. Hence, we do a persist.
       // currHydrant in the sink has 0 bytesInMemory since we just did a persist
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
       // no sinks no hydrants after a persist, so we should have zero bytes currently in memory
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -388,11 +476,11 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "bob", 1), null);
       // currHydrant in the sink still has > 0 bytesInMemory since we do not persist yet
       currentInMemoryIndexSize = 190 + nullHandlingOverhead;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -406,29 +494,33 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       currentInMemoryIndexSize = 0;
       // We are now over maxSizeInBytes after the add. Hence, we do a persist.
       // so no sinks & hydrants should be in memory...
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
       appenderator.persistAll(null).get();
       appenderator.close();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
     }
   }
 
-  @Test(expected = RuntimeException.class, timeout = 5000L)
+  @Test
+  @Timeout(value = 5000L, unit = TimeUnit.MILLISECONDS)
   public void testTaskFailAsPersistCannotFreeAnyMoreMemory() throws Exception
   {
     try (final BatchAppenderatorTester tester =
              new BatchAppenderatorTester(100, 5180, true)) {
       final Appenderator appenderator = tester.getAppenderator();
       appenderator.startJob();
-      appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
+      Assertions.assertThrows(
+          RuntimeException.class,
+          () -> appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null)
+      );
     }
   }
 
@@ -451,13 +543,13 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
 
       // Expected 0 since we persisted after the add
-      Assert.assertEquals(
+      Assertions.assertEquals(
           0,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
 
-      Assert.assertEquals(
+      Assertions.assertEquals(
           0,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -478,7 +570,7 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       int nullHandlingOverhead = 1;
       int currentInMemoryIndexSize = 190 + nullHandlingOverhead;
       int sinkSizeOverhead = BatchAppenderator.ROUGH_OVERHEAD_PER_SINK;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -486,8 +578,8 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       // Close with row still in memory (no persist)
       appenderator.close();
 
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
     }
   }
 
@@ -509,15 +601,15 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       int currentInMemoryIndexSize = 190 + nullHandlingOverhead;
       int sinkSizeOverhead = 2 * BatchAppenderator.ROUGH_OVERHEAD_PER_SINK;
       // currHydrant in the sink still has > 0 bytesInMemory since we do not persist yet
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(1))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           (2 * currentInMemoryIndexSize) + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -533,15 +625,15 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       currentInMemoryIndexSize = 0;
       // We are now over maxSizeInBytes after the add. Hence, we do a persist.
       // currHydrant and the sink has 0 bytesInMemory since we just did a persist
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(1))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -550,32 +642,32 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "bob", 1), null);
       // currHydrant in the sink still has > 0 bytesInMemory since we do not persist yet
       currentInMemoryIndexSize = 190 + nullHandlingOverhead;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           0,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(1))
       );
       // only one sink so far:
       sinkSizeOverhead = BatchAppenderator.ROUGH_OVERHEAD_PER_SINK;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
       // Now add a single row to sink 1
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bob", 1), null);
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(1))
       );
       sinkSizeOverhead += BatchAppenderator.ROUGH_OVERHEAD_PER_SINK;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           (2 * currentInMemoryIndexSize) + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
@@ -591,24 +683,24 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       currentInMemoryIndexSize = 0;
       // We are now over maxSizeInBytes after the add. Hence, we do a persist.
       // currHydrant in the sink has 0 bytesInMemory since we just did a persist
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(1))
       );
       // Mapped index size is the memory still needed after we persisted indexes. Note that the segments have
       // 1 dimension columns, 2 metric column, 1 time column. However, we have two indexes now from the two pervious
       // persists.
-      Assert.assertEquals(
+      Assertions.assertEquals(
           currentInMemoryIndexSize,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
       appenderator.close();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory());
     }
   }
 
@@ -619,29 +711,29 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
              new BatchAppenderatorTester(100, -1, true)) {
       final Appenderator appenderator = tester.getAppenderator();
 
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.startJob();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
       //we still calculate the size even when ignoring it to make persist decision
       int nullHandlingOverhead = 1;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           190 + nullHandlingOverhead,
           ((BatchAppenderator) appenderator).getBytesInMemory(IDENTIFIERS.get(0))
       );
-      Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
 
       // we added two rows only, and we told that maxSizeInBytes should be ignored, so it should not have been
       // persisted:
       int sinkSizeOverhead = 2 * BatchAppenderator.ROUGH_OVERHEAD_PER_SINK;
-      Assert.assertEquals(
+      Assertions.assertEquals(
           (380 + 2 * nullHandlingOverhead) + sinkSizeOverhead,
           ((BatchAppenderator) appenderator).getBytesCurrentlyInMemory()
       );
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.close();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
     }
   }
 
@@ -651,29 +743,29 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
     try (final BatchAppenderatorTester tester = new BatchAppenderatorTester(3, false)) {
       final Appenderator appenderator = tester.getAppenderator();
 
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.startJob();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
-      Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
       // no persist since last add was for a dup record
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bat", 1), null);
       // persist expected ^ (3) rows added
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
 
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "baz", 1), null);
-      Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "qux", 1), null);
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "bob", 1), null);
       // persist expected ^ (3) rows added
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.close();
     }
   }
@@ -684,9 +776,9 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
     try (final BatchAppenderatorTester tester = new BatchAppenderatorTester(1, false)) {
       final Appenderator appenderator = tester.getAppenderator();
 
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.startJob();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo2", 1), null);
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo3", 1), null);
@@ -694,19 +786,33 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       // Since maxRowsInMemory is one there ought to be three hydrants stored and recovered
       // just before push, internally the code has a sanity check to make sure that this works. If it does not it throws
       // an exception
-      final SegmentsAndCommitMetadata segmentsAndCommitMetadata = appenderator.push(
+      final List<String> segments = appenderator.push(
           appenderator.getSegments(),
           null,
           false
-      ).get();
-      Assert.assertEquals(
-          IDENTIFIERS.subList(0, 1),
-          Lists.transform(
-              segmentsAndCommitMetadata.getSegments(),
-              SegmentIdWithShardSpec::fromDataSegment
-          ).stream().sorted().collect(Collectors.toList())
+      ).get().getSegments().stream().sorted().map(DataSegment::toString).collect(Collectors.toList());
+      Assertions.assertEquals(
+          List.of(
+              DataSegment.builder(IDENTIFIERS.get(0).asSegmentId())
+                         .shardSpec(IDENTIFIERS.get(0).getShardSpec())
+                         .dimensions(List.of("dim"))
+                         .metrics(List.of("count", "met"))
+                         .totalRows(3)
+                         .build()
+                         .toString()
+          ),
+          segments
       );
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+
+      SegmentGenerationMetrics segmentGenerationMetrics = tester.getMetrics();
+      Assertions.assertEquals(4, segmentGenerationMetrics.numPersists());
+      Assertions.assertEquals(3, segmentGenerationMetrics.rowOutput());
+      Assertions.assertTrue(segmentGenerationMetrics.persistTimeMillis() > 0);
+      Assertions.assertTrue(segmentGenerationMetrics.persistCpuTime() > 0);
+
+      Assertions.assertTrue(segmentGenerationMetrics.mergeTimeMillis() > 0);
+      Assertions.assertTrue(segmentGenerationMetrics.mergeCpuTime() > 0);
       appenderator.close();
     }
   }
@@ -717,56 +823,56 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
     try (final BatchAppenderatorTester tester = new BatchAppenderatorTester(3, false)) {
       final Appenderator appenderator = tester.getAppenderator();
 
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       appenderator.startJob();
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
       Appenderator.AppenderatorAddResult addResult0 =
           appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
-      Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(1, addResult0.getNumRowsInSegment());
+      Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(1, addResult0.getNumRowsInSegment());
 
       Appenderator.AppenderatorAddResult addResult1 =
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(1, addResult1.getNumRowsInSegment());
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(1, addResult1.getNumRowsInSegment());
 
       addResult1 = // dup!
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(1, addResult1.getNumRowsInSegment()); // dup record does not count
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(1, addResult1.getNumRowsInSegment()); // dup record does not count
       // no persist since last add was for a dup record
 
       addResult1 =
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bat", 1), null);
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(2, addResult1.getNumRowsInSegment());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(2, addResult1.getNumRowsInSegment());
       // persist expected ^ (3) rows added
 
       // total rows per segment ought to be preserved even when sinks are removed from memory:
       addResult1 =
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bat", 1), null);
-      Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(3, addResult1.getNumRowsInSegment());
+      Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(3, addResult1.getNumRowsInSegment());
 
       addResult0 =
           appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "baz", 1), null);
-      Assert.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(2, addResult0.getNumRowsInSegment());
+      Assertions.assertEquals(2, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(2, addResult0.getNumRowsInSegment());
 
       addResult1 =
           appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "qux", 1), null);
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(4, addResult1.getNumRowsInSegment());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(4, addResult1.getNumRowsInSegment());
       // persist expected ^ (3) rows added
 
       addResult0 =
           appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "bob", 1), null);
-      Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
-      Assert.assertEquals(3, addResult0.getNumRowsInSegment());
+      Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(3, addResult0.getNumRowsInSegment());
 
       appenderator.close();
 
-      Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+      Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
     }
   }
 
@@ -782,29 +888,29 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
     appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
     appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "bar", 2), null);
 
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
 
     appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "baz", 3), null);
     appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "qux", 4), null);
 
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
 
     appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "bob", 5), null);
-    Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
     appenderator.persistAll(null).get();
 
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
 
     List<File> segmentPaths = ((BatchAppenderator) appenderator).getPersistedidentifierPaths();
-    Assert.assertNotNull(segmentPaths);
-    Assert.assertEquals(3, segmentPaths.size());
+    Assertions.assertNotNull(segmentPaths);
+    Assertions.assertEquals(3, segmentPaths.size());
 
 
     appenderator.push(IDENTIFIERS, null, false).get();
 
     segmentPaths = ((BatchAppenderator) appenderator).getPersistedidentifierPaths();
-    Assert.assertNotNull(segmentPaths);
-    Assert.assertEquals(0, segmentPaths.size());
+    Assertions.assertNotNull(segmentPaths);
+    Assertions.assertEquals(0, segmentPaths.size());
 
     appenderator.close();
 
@@ -820,73 +926,74 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
 
     appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
     appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "bar", 2), null);
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-    Assert.assertEquals(2, appenderator.getTotalRowCount());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(2, appenderator.getTotalRowCount());
 
     appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "baz", 3), null);
     appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "qux", 4), null);
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-    Assert.assertEquals(4, appenderator.getTotalRowCount());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(4, appenderator.getTotalRowCount());
 
     appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "bob", 5), null);
-    Assert.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(1, ((BatchAppenderator) appenderator).getRowsInMemory());
     appenderator.persistAll(null).get();
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-    Assert.assertEquals(5, appenderator.getTotalRowCount());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(5, appenderator.getTotalRowCount());
 
     List<File> segmentPaths = ((BatchAppenderator) appenderator).getPersistedidentifierPaths();
-    Assert.assertNotNull(segmentPaths);
-    Assert.assertEquals(3, segmentPaths.size());
+    Assertions.assertNotNull(segmentPaths);
+    Assertions.assertEquals(3, segmentPaths.size());
 
     appenderator.close();
 
     segmentPaths = ((BatchAppenderator) appenderator).getPersistedidentifierPaths();
-    Assert.assertNotNull(segmentPaths);
-    Assert.assertEquals(0, segmentPaths.size());
+    Assertions.assertNotNull(segmentPaths);
+    Assertions.assertEquals(0, segmentPaths.size());
 
-    Assert.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
-    Assert.assertEquals(0, appenderator.getTotalRowCount());
+    Assertions.assertEquals(0, ((BatchAppenderator) appenderator).getRowsInMemory());
+    Assertions.assertEquals(0, appenderator.getTotalRowCount());
 
   }
 
 
-  @Test(timeout = 5000L)
+  @Test
+  @Timeout(value = 5000L, unit = TimeUnit.MILLISECONDS)
   public void testTotalRowCount() throws Exception
   {
     try (final BatchAppenderatorTester tester = new BatchAppenderatorTester(3, false)) {
       final Appenderator appenderator = tester.getAppenderator();
 
-      Assert.assertEquals(0, appenderator.getTotalRowCount());
+      Assertions.assertEquals(0, appenderator.getTotalRowCount());
       appenderator.startJob();
-      Assert.assertEquals(0, appenderator.getTotalRowCount());
+      Assertions.assertEquals(0, appenderator.getTotalRowCount());
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
-      Assert.assertEquals(1, appenderator.getTotalRowCount());
+      Assertions.assertEquals(1, appenderator.getTotalRowCount());
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar", 1), null);
-      Assert.assertEquals(2, appenderator.getTotalRowCount());
+      Assertions.assertEquals(2, appenderator.getTotalRowCount());
 
       appenderator.persistAll(null).get();
-      Assert.assertEquals(2, appenderator.getTotalRowCount());
+      Assertions.assertEquals(2, appenderator.getTotalRowCount());
       appenderator.drop(IDENTIFIERS.get(0)).get();
-      Assert.assertEquals(1, appenderator.getTotalRowCount());
+      Assertions.assertEquals(1, appenderator.getTotalRowCount());
       appenderator.drop(IDENTIFIERS.get(1)).get();
-      Assert.assertEquals(0, appenderator.getTotalRowCount());
+      Assertions.assertEquals(0, appenderator.getTotalRowCount());
 
       appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "bar", 1), null);
-      Assert.assertEquals(1, appenderator.getTotalRowCount());
+      Assertions.assertEquals(1, appenderator.getTotalRowCount());
       appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "baz", 1), null);
-      Assert.assertEquals(2, appenderator.getTotalRowCount());
+      Assertions.assertEquals(2, appenderator.getTotalRowCount());
       appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "qux", 1), null);
-      Assert.assertEquals(3, appenderator.getTotalRowCount());
+      Assertions.assertEquals(3, appenderator.getTotalRowCount());
       appenderator.add(IDENTIFIERS.get(2), createInputRow("2001", "bob", 1), null);
-      Assert.assertEquals(4, appenderator.getTotalRowCount());
+      Assertions.assertEquals(4, appenderator.getTotalRowCount());
 
       appenderator.persistAll(null).get();
-      Assert.assertEquals(4, appenderator.getTotalRowCount());
+      Assertions.assertEquals(4, appenderator.getTotalRowCount());
       appenderator.drop(IDENTIFIERS.get(2)).get();
-      Assert.assertEquals(0, appenderator.getTotalRowCount());
+      Assertions.assertEquals(0, appenderator.getTotalRowCount());
 
       appenderator.close();
-      Assert.assertEquals(0, appenderator.getTotalRowCount());
+      Assertions.assertEquals(0, appenderator.getTotalRowCount());
     }
   }
 
@@ -906,14 +1013,15 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       ), null);
       appenderator.add(IDENTIFIERS.get(0), createInputRow("2000", "foo", 1), null);
 
-      Assert.assertEquals(1, rowIngestionMeters.getProcessed());
-      Assert.assertEquals(1, rowIngestionMeters.getProcessedWithError());
-      Assert.assertEquals(0, rowIngestionMeters.getUnparseable());
-      Assert.assertEquals(0, rowIngestionMeters.getThrownAway());
+      Assertions.assertEquals(1, rowIngestionMeters.getProcessed());
+      Assertions.assertEquals(1, rowIngestionMeters.getProcessedWithError());
+      Assertions.assertEquals(0, rowIngestionMeters.getUnparseable());
+      Assertions.assertEquals(0, rowIngestionMeters.getThrownAway());
     }
   }
 
-  @Test(timeout = 10000L)
+  @Test
+  @Timeout(value = 10000L, unit = TimeUnit.MILLISECONDS)
   public void testPushContract() throws Exception
   {
     final RowIngestionMeters rowIngestionMeters = new SimpleRowIngestionMeters();
@@ -930,30 +1038,35 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       appenderator.add(IDENTIFIERS.get(1), createInputRow("2000", "bar3", 1), null);
 
       // push only a single segment
-      final SegmentsAndCommitMetadata segmentsAndCommitMetadata = appenderator.push(
+      final List<String> segments = appenderator.push(
           Collections.singletonList(IDENTIFIERS.get(0)),
           null,
           false
-      ).get();
+      ).get().getSegments().stream().sorted().map(DataSegment::toString).collect(Collectors.toList());
 
       // only one segment must have been pushed:
-      Assert.assertEquals(
-          Collections.singletonList(IDENTIFIERS.get(0)),
-          Lists.transform(
-              segmentsAndCommitMetadata.getSegments(),
-              SegmentIdWithShardSpec::fromDataSegment
-          ).stream().sorted().collect(Collectors.toList())
+      Assertions.assertEquals(
+          List.of(
+              DataSegment.builder(IDENTIFIERS.get(0).asSegmentId())
+                         .shardSpec(IDENTIFIERS.get(0).getShardSpec())
+                         .dimensions(List.of("dim"))
+                         .metrics(List.of("count", "met"))
+                         .totalRows(2)
+                         .build()
+                         .toString()
+          ),
+          segments
       );
 
-      Assert.assertEquals(
-          tester.getPushedSegments().stream().sorted().collect(Collectors.toList()),
-          segmentsAndCommitMetadata.getSegments().stream().sorted().collect(Collectors.toList())
+      Assertions.assertEquals(
+          tester.getPushedSegments().stream().sorted().map(DataSegment::toString).collect(Collectors.toList()),
+          segments
       );
       // the responsability for dropping is in the BatchAppenderatorDriver, drop manually:
       appenderator.drop(IDENTIFIERS.get(0));
 
       // and the segment that was not pushed should still be active
-      Assert.assertEquals(
+      Assertions.assertEquals(
           Collections.singletonList(IDENTIFIERS.get(1)),
           appenderator.getSegments()
       );
@@ -962,7 +1075,8 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
     }
   }
 
-  @Test(timeout = 5000L)
+  @Test
+  @Timeout(value = 5000L, unit = TimeUnit.MILLISECONDS)
   public void testCloseContract() throws Exception
   {
     final RowIngestionMeters rowIngestionMeters = new SimpleRowIngestionMeters();
@@ -996,18 +1110,18 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
       // close should wait for all pushes and persists to end:
       appenderator.close();
 
-      Assert.assertTrue(!firstFuture.isCancelled());
-      Assert.assertTrue(!secondFuture.isCancelled());
+      Assertions.assertTrue(!firstFuture.isCancelled());
+      Assertions.assertTrue(!secondFuture.isCancelled());
 
-      Assert.assertTrue(firstFuture.isDone());
-      Assert.assertTrue(secondFuture.isDone());
+      Assertions.assertTrue(firstFuture.isDone());
+      Assertions.assertTrue(secondFuture.isDone());
 
       final SegmentsAndCommitMetadata segmentsAndCommitMetadataForFirstFuture = firstFuture.get();
       final SegmentsAndCommitMetadata segmentsAndCommitMetadataForSecondFuture = secondFuture.get();
 
       // all segments must have been pushed:
-      Assert.assertEquals(segmentsAndCommitMetadataForFirstFuture.getSegments().size(), 1);
-      Assert.assertEquals(segmentsAndCommitMetadataForSecondFuture.getSegments().size(), 1);
+      Assertions.assertEquals(segmentsAndCommitMetadataForFirstFuture.getSegments().size(), 1);
+      Assertions.assertEquals(segmentsAndCommitMetadataForSecondFuture.getSegments().size(), 1);
 
     }
   }
@@ -1050,5 +1164,13 @@ public class BatchAppenderatorTest extends InitializedNullHandlingTest
     );
   }
 
-}
+  static InputRow createClusterRow(String ts, String tenant, String region)
+  {
+    return new MapBasedInputRow(
+        DateTimes.of(ts).getMillis(),
+        ImmutableList.of("tenant", "region"),
+        ImmutableMap.of("ts", ts, "tenant", tenant, "region", region)
+    );
+  }
 
+}
