@@ -22,8 +22,8 @@ package org.apache.druid.server;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.exc.ValueInstantiationException;
 import com.fasterxml.jackson.jaxrs.smile.SmileMediaTypes;
-import com.google.common.base.Suppliers;
 import com.google.common.base.Throwables;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -32,13 +32,18 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 import com.google.inject.Injector;
 import com.google.inject.Key;
+import org.apache.druid.client.BrokerViewOfBrokerConfig;
+import org.apache.druid.common.exception.ErrorResponseTransformStrategy;
 import org.apache.druid.error.DruidException;
 import org.apache.druid.error.DruidExceptionMatcher;
 import org.apache.druid.error.ErrorResponse;
+import org.apache.druid.error.InvalidInput;
 import org.apache.druid.guice.GuiceInjectors;
 import org.apache.druid.guice.annotations.Smile;
 import org.apache.druid.jackson.DefaultObjectMapper;
+import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Intervals;
+import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.common.concurrent.Execs;
 import org.apache.druid.java.util.common.guava.Accumulator;
 import org.apache.druid.java.util.common.guava.BaseSequence;
@@ -50,10 +55,13 @@ import org.apache.druid.java.util.common.guava.Yielders;
 import org.apache.druid.java.util.common.guava.YieldingAccumulator;
 import org.apache.druid.java.util.emitter.EmittingLogger;
 import org.apache.druid.java.util.emitter.service.ServiceEmitter;
+import org.apache.druid.java.util.emitter.service.ServiceMetricEvent;
+import org.apache.druid.java.util.metrics.StubServiceEmitter;
 import org.apache.druid.query.BadJsonQueryException;
 import org.apache.druid.query.DefaultGenericQueryMetricsFactory;
 import org.apache.druid.query.DefaultQueryConfig;
 import org.apache.druid.query.DefaultQueryRunnerFactoryConglomerate;
+import org.apache.druid.query.DruidMetrics;
 import org.apache.druid.query.Query;
 import org.apache.druid.query.QueryCapacityExceededException;
 import org.apache.druid.query.QueryException;
@@ -70,11 +78,12 @@ import org.apache.druid.query.filter.NullFilter;
 import org.apache.druid.query.policy.NoopPolicyEnforcer;
 import org.apache.druid.query.policy.RowFilterPolicy;
 import org.apache.druid.query.timeboundary.TimeBoundaryResultValue;
+import org.apache.druid.server.broker.BrokerDynamicConfig;
+import org.apache.druid.server.broker.QueryConfigSnapshot;
 import org.apache.druid.server.initialization.ServerConfig;
 import org.apache.druid.server.log.TestRequestLogger;
 import org.apache.druid.server.metrics.NoopServiceEmitter;
 import org.apache.druid.server.mocks.ExceptionalInputStream;
-import org.apache.druid.server.mocks.MockAsyncContext;
 import org.apache.druid.server.mocks.MockHttpServletRequest;
 import org.apache.druid.server.mocks.MockHttpServletResponse;
 import org.apache.druid.server.scheduling.HiLoQueryLaningStrategy;
@@ -91,29 +100,30 @@ import org.apache.druid.server.security.AuthorizerMapper;
 import org.apache.druid.server.security.ForbiddenException;
 import org.apache.druid.server.security.Resource;
 import org.apache.http.HttpStatus;
-import org.easymock.EasyMock;
-import org.eclipse.jetty.http.HttpFields;
+import org.assertj.core.api.AssertionsForClassTypes;
 import org.eclipse.jetty.http.HttpHeader;
-import org.eclipse.jetty.server.HttpChannel;
-import org.eclipse.jetty.server.HttpOutput;
-import org.hamcrest.CoreMatchers;
-import org.hamcrest.MatcherAssert;
 import org.joda.time.Interval;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.internal.matchers.ThrowableMessageMatcher;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.Timeout.ThreadMode;
+import org.mockito.ArgumentMatchers;
+import org.mockito.Mockito;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
+import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
+
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -121,12 +131,17 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class QueryResourceTest
 {
@@ -201,6 +216,22 @@ public class QueryResourceTest
       + "    \"context\": { \"priority\": -1 }"
       + "}";
 
+  private static final String SIMPLE_TIMESERIES_QUERY_WRITE_EXCEPTION_AS_ROW =
+      "{\n"
+      + "    \"queryType\": \"timeseries\",\n"
+      + "    \"dataSource\": \"mmx_metrics\",\n"
+      + "    \"granularity\": \"hour\",\n"
+      + "    \"intervals\": [\n"
+      + "      \"2014-12-17/2015-12-30\"\n"
+      + "    ],\n"
+      + "    \"aggregations\": [\n"
+      + "      {\n"
+      + "        \"type\": \"count\",\n"
+      + "        \"name\": \"rows\"\n"
+      + "      }\n"
+      + "    ],\n"
+      + "    \"context\": { \"writeExceptionBodyAsResponseRow\": \"true\" }"
+      + "}";
 
   private static final ServiceEmitter NOOP_SERVICE_EMITTER = new NoopServiceEmitter();
   private static final DruidNode DRUID_NODE = new DruidNode(
@@ -218,14 +249,15 @@ public class QueryResourceTest
   private QueryResource queryResource;
   private QueryScheduler queryScheduler;
   private TestRequestLogger testRequestLogger;
+  private StubServiceEmitter emitter;
 
-  @BeforeClass
+  @BeforeAll
   public static void staticSetup()
   {
     EmittingLogger.registerEmitter(NOOP_SERVICE_EMITTER);
   }
 
-  @Before
+  @BeforeEach
   public void setup()
   {
     Injector injector = GuiceInjectors.makeStartupInjector();
@@ -238,35 +270,72 @@ public class QueryResourceTest
 
     queryScheduler = QueryStackTests.DEFAULT_NOOP_SCHEDULER;
     testRequestLogger = new TestRequestLogger();
+    emitter = StubServiceEmitter.createStarted();
     queryResource = createQueryResource(ResponseContextConfig.newConfig(true));
+  }
+
+  private QueryLifecycleFactory createQueryLifecycleFactory()
+  {
+    return new QueryLifecycleFactory(
+        CONGLOMERATE,
+        TEST_SEGMENT_WALKER,
+        new DefaultGenericQueryMetricsFactory(),
+        emitter,
+        testRequestLogger,
+        new AuthConfig(),
+        NoopPolicyEnforcer.instance(),
+        AuthTestUtils.TEST_AUTHORIZER_MAPPER,
+        new DefaultQueryConfig(Map.of()),
+        null
+    );
   }
 
   private QueryResource createQueryResource(ResponseContextConfig responseContextConfig)
   {
+    return createQueryResource(
+        createQueryLifecycleFactory(),
+        null,
+        queryScheduler,
+        responseContextConfig,
+        smileMapper,
+        new ServerConfig()
+    );
+  }
+
+  private QueryResource createQueryResource(QueryLifecycleFactory queryLifecycleFactory)
+  {
+    return createQueryResource(
+        queryLifecycleFactory,
+        null,
+        queryScheduler,
+        ResponseContextConfig.newConfig(true),
+        smileMapper,
+        new ServerConfig()
+    );
+  }
+
+  /**
+   * Every {@link QueryResource} under test is built here, so a change to its constructor touches one call site.
+   *
+   * @param responseMapper mapper backing the response writer, i.e. the smile mapper unless the test needs json
+   */
+  private QueryResource createQueryResource(
+      final QueryLifecycleFactory queryLifecycleFactory,
+      @Nullable final AuthorizerMapper authorizerMapper,
+      final QueryScheduler queryScheduler,
+      final ResponseContextConfig responseContextConfig,
+      final ObjectMapper responseMapper,
+      final ServerConfig serverConfig
+  )
+  {
     return new QueryResource(
-        new QueryLifecycleFactory(
-            CONGLOMERATE,
-            TEST_SEGMENT_WALKER,
-            new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
-            testRequestLogger,
-            new AuthConfig(),
-            NoopPolicyEnforcer.instance(),
-            AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
-        ),
+        queryLifecycleFactory,
         jsonMapper,
         queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            responseContextConfig,
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
-        )
+        authorizerMapper,
+        new QueryResourceQueryResultPusherFactory(jsonMapper, responseContextConfig, DRUID_NODE),
+        new ResourceIOReaderWriterFactory(jsonMapper, responseMapper),
+        serverConfig
     );
   }
 
@@ -275,7 +344,15 @@ public class QueryResourceTest
   {
     expectPermissiveHappyPathAuth();
 
-    Assert.assertEquals(200, expectAsyncRequestFlow(SIMPLE_TIMESERIES_QUERY).getStatus());
+    HttpServletResponse servletResponse = expectAsyncRequestFlow(SIMPLE_TIMESERIES_QUERY);
+    Assertions.assertEquals(200, servletResponse.getStatus());
+    Assertions.assertTrue(servletResponse.containsHeader(HttpHeader.TRAILER.toString()));
+
+    final Map<String, String> fields = servletResponse.getTrailerFields().get();
+    Assertions.assertFalse(fields.containsKey(QueryResource.ERROR_MESSAGE_TRAILER_HEADER));
+
+    Assertions.assertTrue(fields.containsKey(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
+    Assertions.assertEquals(fields.get(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER), "true");
   }
 
   @Test
@@ -284,36 +361,25 @@ public class QueryResourceTest
     final String overrideConfigKey = "priority";
     final String overrideConfigValue = "678";
     DefaultQueryConfig overrideConfig = new DefaultQueryConfig(ImmutableMap.of(overrideConfigKey, overrideConfigValue));
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             TEST_SEGMENT_WALKER,
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(overrideConfig)
-        ),
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
+            overrideConfig,
+            null
         )
     );
 
     expectPermissiveHappyPathAuth();
 
     final MockHttpServletResponse response = expectAsyncRequestFlow(SIMPLE_TIMESERIES_QUERY);
-    Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
 
     final List<Result<TimeBoundaryResultValue>> responses = jsonMapper.readValue(
         response.baos.toByteArray(),
@@ -322,28 +388,28 @@ public class QueryResourceTest
         }
     );
 
-    Assert.assertEquals(0, responses.size());
-    Assert.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
-    Assert.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery());
-    Assert.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext());
-    Assert.assertTrue(testRequestLogger.getNativeQuerylogs()
+    Assertions.assertEquals(0, responses.size());
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    Assertions.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery());
+    Assertions.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext());
+    Assertions.assertTrue(testRequestLogger.getNativeQuerylogs()
                                        .get(0)
                                        .getQuery()
                                        .getContext()
                                        .containsKey(overrideConfigKey));
-    Assert.assertEquals(
+    Assertions.assertEquals(
         overrideConfigValue,
         testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext().get(overrideConfigKey)
     );
   }
 
-  @Test
-  public void testGoodQueryThrowsDruidExceptionFromLifecycleExecute() throws IOException
+  /**
+   * A {@link QueryResource} whose walker throws once the query is already executing, so the failure surfaces through
+   * {@link QueryResultPusher} rather than before it.
+   */
+  private QueryResource createQueryResourceFailingInExecute(final DefaultQueryConfig queryConfig)
   {
-    String overrideConfigKey = "priority";
-    String overrideConfigValue = "678";
-    DefaultQueryConfig overrideConfig = new DefaultQueryConfig(ImmutableMap.of(overrideConfigKey, overrideConfigValue));
-    queryResource = new QueryResource(
+    return createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             new QuerySegmentWalker()
@@ -369,48 +435,51 @@ public class QueryResourceTest
               }
             },
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(overrideConfig)
-        ),
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
+            queryConfig,
+            null
         )
     );
+  }
+
+  @Test
+  public void testGoodQueryThrowsDruidExceptionFromLifecycleExecute() throws IOException
+  {
+    String overrideConfigKey = "priority";
+    String overrideConfigValue = "678";
+    DefaultQueryConfig overrideConfig = new DefaultQueryConfig(ImmutableMap.of(overrideConfigKey, overrideConfigValue));
+    queryResource = createQueryResourceFailingInExecute(overrideConfig);
 
     expectPermissiveHappyPathAuth();
 
     final Response response = expectSynchronousRequestFlow(SIMPLE_TIMESERIES_QUERY);
-    Assert.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(500, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
 
     final ErrorResponse entity = (ErrorResponse) response.getEntity();
-    MatcherAssert.assertThat(
+    DruidExceptionMatcher.assertThat(
         entity.getUnderlyingException(),
-        new DruidExceptionMatcher(DruidException.Persona.OPERATOR, DruidException.Category.RUNTIME_FAILURE, "general")
-            .expectMessageIs("failing for coverage!")
+        new DruidExceptionMatcher(
+            DruidException.Persona.OPERATOR,
+            DruidException.Category.RUNTIME_FAILURE,
+            "general"
+        ).expectMessageIs("failing for coverage!")
     );
 
-    Assert.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
-    Assert.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery());
-    Assert.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext());
-    Assert.assertTrue(testRequestLogger.getNativeQuerylogs()
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    Assertions.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery());
+    Assertions.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext());
+    Assertions.assertTrue(testRequestLogger.getNativeQuerylogs()
                                        .get(0)
                                        .getQuery()
                                        .getContext()
                                        .containsKey(overrideConfigKey));
-    Assert.assertEquals(
+    Assertions.assertEquals(
         overrideConfigValue,
         testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext().get(overrideConfigKey)
     );
@@ -419,7 +488,7 @@ public class QueryResourceTest
   @Test
   public void testResponseWithIncludeTrailerHeader() throws IOException
   {
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             new QuerySegmentWalker()
@@ -467,87 +536,109 @@ public class QueryResourceTest
               }
             },
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
-        ),
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(jsonMapper, smileMapper)
+            new DefaultQueryConfig(Map.of()),
+            null
+        )
     );
 
     expectPermissiveHappyPathAuth();
 
-    org.eclipse.jetty.server.Response response = this.jettyResponseforRequest(testServletRequest);
-    Assert.assertNull(queryResource.doPost(new ByteArrayInputStream(
-                                               SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
-                                           null /*pretty*/,
-                                           testServletRequest
-    ));
-    Assert.assertTrue(response.containsHeader(HttpHeader.TRAILER.toString()));
-    Assert.assertEquals(response.getHeader(HttpHeader.TRAILER.toString()), QueryResultPusher.RESULT_TRAILER_HEADERS);
+    HttpServletResponse response = expectAsyncRequestFlow(testServletRequest, SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8), queryResource);
 
-    final HttpFields fields = response.getTrailers().get();
-    Assert.assertTrue(fields.containsKey(QueryResource.ERROR_MESSAGE_TRAILER_HEADER));
-    Assert.assertEquals(
+    Assertions.assertTrue(response.containsHeader(HttpHeader.TRAILER.toString()));
+    Assertions.assertEquals(response.getHeader(HttpHeader.TRAILER.toString()), QueryResultPusher.RESULT_TRAILER_HEADERS);
+
+    final Map<String, String> fields = response.getTrailerFields().get();
+    Assertions.assertTrue(fields.containsKey(QueryResource.ERROR_MESSAGE_TRAILER_HEADER));
+    Assertions.assertEquals(
         fields.get(QueryResource.ERROR_MESSAGE_TRAILER_HEADER),
         "Query did not complete within configured timeout period. You can increase query timeout or tune the performance of query."
     );
 
-    Assert.assertTrue(fields.containsKey(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
-    Assert.assertEquals(fields.get(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER), "false");
+    Assertions.assertTrue(fields.containsKey(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
+    Assertions.assertEquals(fields.get(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER), "false");
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(504, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
-  public void testSuccessResponseWithTrailerHeader() throws IOException
+  public void testResponseWithMidFlightExceptions() throws IOException
   {
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
-            TEST_SEGMENT_WALKER,
+            new QuerySegmentWalker()
+            {
+              @Override
+              public <T> QueryRunner<T> getQueryRunnerForIntervals(
+                  Query<T> query,
+                  Iterable<Interval> intervals
+              )
+              {
+                return (queryPlus, responseContext) -> new Sequence<T>()
+                {
+                  @Override
+                  public <OutType> OutType accumulate(OutType initValue, Accumulator<OutType, T> accumulator)
+                  {
+                    accumulator.accumulate(null,
+                                           (T) new TimeBoundaryResultValue(ImmutableMap.<String, Object>of("maxTime", DateTimes.of("2014-08-02")))
+                    );
+                    throw InvalidInput.exception("mid-flight exception");
+                  }
+
+                  @Override
+                  public <OutType> Yielder<OutType> toYielder(
+                      OutType initValue,
+                      YieldingAccumulator<OutType, T> accumulator
+                  )
+                  {
+                    throw new UnsupportedOperationException("not implemented");
+                  }
+                };
+              }
+
+              @Override
+              public <T> QueryRunner<T> getQueryRunnerForSegments(
+                  Query<T> query,
+                  Iterable<SegmentDescriptor> specs
+              )
+              {
+                throw new UnsupportedOperationException();
+              }
+            },
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
-        ),
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(jsonMapper, smileMapper)
+            new DefaultQueryConfig(Map.of()),
+            null
+        )
     );
 
     expectPermissiveHappyPathAuth();
 
-    org.eclipse.jetty.server.Response response = this.jettyResponseforRequest(testServletRequest);
-    Assert.assertNull(queryResource.doPost(new ByteArrayInputStream(
-                                               SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
-                                           null /*pretty*/,
-                                           testServletRequest
-    ));
-    Assert.assertTrue(response.containsHeader(HttpHeader.TRAILER.toString()));
-
-    final HttpFields fields = response.getTrailers().get();
-    Assert.assertFalse(fields.containsKey(QueryResource.ERROR_MESSAGE_TRAILER_HEADER));
-
-    Assert.assertTrue(fields.containsKey(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
-    Assert.assertEquals(fields.get(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER), "true");
+    MockHttpServletResponse response = expectAsyncRequestFlow(testServletRequest,
+                                                              SIMPLE_TIMESERIES_QUERY_WRITE_EXCEPTION_AS_ROW.getBytes(
+                                                                  StandardCharsets.UTF_8),
+                                                              queryResource
+    );
+    String actualOutput = response.baos.toString(Charset.defaultCharset());
+    Assertions.assertEquals(
+        "[{\"maxTime\":\"2014-08-02T00:00:00.000Z\"},{\"error\":\"druidException\","
+        + "\"errorCode\":\"invalidInput\",\"persona\":\"USER\",\"category\":\"INVALID_INPUT\","
+        + "\"errorMessage\":\"mid-flight exception\",\"context\":{}}]",
+        actualOutput
+    );
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(400, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -557,7 +648,7 @@ public class QueryResourceTest
         Intervals.of("2025-01-01/P1D"), "0", 1
     );
 
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             new QuerySegmentWalker()
@@ -612,52 +703,35 @@ public class QueryResourceTest
               }
             },
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
-        ),
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
+            new DefaultQueryConfig(Map.of()),
+            null
         )
     );
 
     expectPermissiveHappyPathAuth();
 
-    org.eclipse.jetty.server.Response response = this.jettyResponseforRequest(testServletRequest);
+    HttpServletResponse response = expectAsyncRequestFlow(testServletRequest, SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8), queryResource);
 
-    // Execute the query
-    Assert.assertNull(queryResource.doPost(
-        new ByteArrayInputStream(SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
-        null,
-        testServletRequest
-    ));
+    Assertions.assertTrue(response.containsHeader(HttpHeader.TRAILER.toString()));
+    Assertions.assertEquals(QueryResultPusher.RESULT_TRAILER_HEADERS, response.getHeader(HttpHeader.TRAILER.toString()));
 
-
-    Assert.assertTrue(response.containsHeader(HttpHeader.TRAILER.toString()));
-    Assert.assertEquals(QueryResultPusher.RESULT_TRAILER_HEADERS, response.getHeader(HttpHeader.TRAILER.toString()));
-
-    final HttpFields observedFields = response.getTrailers().get();
-
-    Assert.assertTrue(response.containsHeader(QueryResource.HEADER_RESPONSE_CONTEXT));
-    Assert.assertEquals(
+    final Map<String, String> fields = response.getTrailerFields().get();
+    Assertions.assertTrue(response.containsHeader(QueryResource.HEADER_RESPONSE_CONTEXT));
+    Assertions.assertEquals(
         jsonMapper.writeValueAsString(ImmutableMap.of("missingSegments", ImmutableList.of(missingSegDesc))),
         response.getHeader(QueryResource.HEADER_RESPONSE_CONTEXT)
     );
 
-    Assert.assertTrue(observedFields.containsKey(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
-    Assert.assertEquals("true", observedFields.get(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
+    Assertions.assertTrue(fields.containsKey(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
+    Assertions.assertEquals("true", fields.get(QueryResource.RESPONSE_COMPLETE_TRAILER_HEADER));
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
 
@@ -690,9 +764,9 @@ public class QueryResourceTest
       }
     };
 
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
 
-        new QueryLifecycleFactory(null, null, null, null, null, null, NoopPolicyEnforcer.instance(), null, Suppliers.ofInstance(overrideConfig))
+        new QueryLifecycleFactory(null, null, null, null, null, null, NoopPolicyEnforcer.instance(), null, overrideConfig, null)
         {
           @Override
           public QueryLifecycle factorize()
@@ -701,12 +775,12 @@ public class QueryResourceTest
                 CONGLOMERATE,
                 querySegmentWalker,
                 new DefaultGenericQueryMetricsFactory(),
-                new NoopServiceEmitter(),
+                emitter,
                 testRequestLogger,
                 AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-                overrideConfig,
                 new AuthConfig(),
                 NoopPolicyEnforcer.instance(),
+                new QueryConfigSnapshot(overrideConfig.getContext(), null),
                 System.currentTimeMillis(),
                 System.nanoTime()
             )
@@ -714,39 +788,30 @@ public class QueryResourceTest
               @Override
               public void emitLogsAndMetrics(@Nullable Throwable e, @Nullable String remoteAddress, long bytesWritten)
               {
-                Assert.assertTrue(Throwables.getStackTraceAsString(e).contains(embeddedExceptionMessage));
+                super.emitLogsAndMetrics(e, remoteAddress, bytesWritten);
+                Assertions.assertTrue(Throwables.getStackTraceAsString(e).contains(embeddedExceptionMessage));
               }
             };
           }
-        },
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
-        )
+        }
     );
 
     expectPermissiveHappyPathAuth();
 
     final Response response = expectSynchronousRequestFlow(SIMPLE_TIMESERIES_QUERY);
-    Assert.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
 
     final ErrorResponse entity = (ErrorResponse) response.getEntity();
-    MatcherAssert.assertThat(
+    DruidExceptionMatcher.assertThat(
         entity.getUnderlyingException(),
         new DruidExceptionMatcher(
             DruidException.Persona.OPERATOR,
-            DruidException.Category.RUNTIME_FAILURE, "legacyQueryException"
-        )
-            .expectMessageIs("something")
+            DruidException.Category.RUNTIME_FAILURE,
+            "legacyQueryException"
+        ).expectMessageIs("something")
     );
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(500, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -755,29 +820,18 @@ public class QueryResourceTest
     String overrideConfigKey = "priority";
     String overrideConfigValue = "678";
     DefaultQueryConfig overrideConfig = new DefaultQueryConfig(ImmutableMap.of(overrideConfigKey, overrideConfigValue));
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             TEST_SEGMENT_WALKER,
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(overrideConfig)
-        ),
-        jsonMapper,
-        queryScheduler,
-        null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
+            overrideConfig,
+            null
         )
     );
 
@@ -792,21 +846,23 @@ public class QueryResourceTest
         }
     );
 
-    Assert.assertNotNull(response);
-    Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
-    Assert.assertEquals(0, responses.size());
-    Assert.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
-    Assert.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery());
-    Assert.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext());
-    Assert.assertTrue(testRequestLogger.getNativeQuerylogs()
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(0, responses.size());
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    Assertions.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery());
+    Assertions.assertNotNull(testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext());
+    Assertions.assertTrue(testRequestLogger.getNativeQuerylogs()
                                        .get(0)
                                        .getQuery()
                                        .getContext()
                                        .containsKey(overrideConfigKey));
-    Assert.assertEquals(
+    Assertions.assertEquals(
         -1,
         testRequestLogger.getNativeQuerylogs().get(0).getQuery().getContext().get(overrideConfigKey)
     );
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -821,16 +877,18 @@ public class QueryResourceTest
         SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8),
         queryResource
     );
-    Assert.assertEquals(1, queryResource.getInterruptedQueryCount());
-    Assert.assertEquals(HttpStatus.SC_INTERNAL_SERVER_ERROR, response.getStatus());
+    Assertions.assertEquals(1, queryResource.getInterruptedQueryCount());
+    Assertions.assertEquals(HttpStatus.SC_INTERNAL_SERVER_ERROR, response.getStatus());
     final String expectedException = new QueryInterruptedException(
         new TruncatedResponseContextException("Serialized response context exceeds the max size[0]"),
         DRUID_NODE.getHostAndPortToUse()
     ).toString();
-    Assert.assertEquals(
+    Assertions.assertEquals(
         expectedException,
         jsonMapper.readValue(response.baos.toByteArray(), QueryInterruptedException.class).toString()
     );
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(500, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -844,7 +902,11 @@ public class QueryResourceTest
         SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8),
         queryResource
     );
-    Assert.assertEquals(HttpStatus.SC_OK, response.getStatus());
+    Assertions.assertEquals(HttpStatus.SC_OK, response.getStatus());
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(1, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -854,9 +916,13 @@ public class QueryResourceTest
     expectPermissiveHappyPathAuth();
 
     final MockHttpServletResponse response = expectAsyncRequestFlow(SIMPLE_TIMESERIES_QUERY);
-    Assert.assertEquals(HttpStatus.SC_OK, response.getStatus());
+    Assertions.assertEquals(HttpStatus.SC_OK, response.getStatus());
     //since accept header is null, the response content type should be same as the value of 'Content-Type' header
-    Assert.assertEquals(MediaType.APPLICATION_JSON, response.getContentType());
+    Assertions.assertEquals(MediaType.APPLICATION_JSON, response.getContentType());
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(1, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -867,9 +933,13 @@ public class QueryResourceTest
 
     final MockHttpServletResponse response = expectAsyncRequestFlow(SIMPLE_TIMESERIES_QUERY);
 
-    Assert.assertEquals(HttpStatus.SC_OK, response.getStatus());
+    Assertions.assertEquals(HttpStatus.SC_OK, response.getStatus());
     //since accept header is empty, the response content type should be same as the value of 'Content-Type' header
-    Assert.assertEquals(MediaType.APPLICATION_JSON, response.getContentType());
+    Assertions.assertEquals(MediaType.APPLICATION_JSON, response.getContentType());
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(1, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -881,10 +951,14 @@ public class QueryResourceTest
     testServletRequest.headers.put("Accept", SmileMediaTypes.APPLICATION_JACKSON_SMILE);
 
     final MockHttpServletResponse response = expectAsyncRequestFlow(SIMPLE_TIMESERIES_QUERY);
-    Assert.assertEquals(HttpStatus.SC_OK, response.getStatus());
+    Assertions.assertEquals(HttpStatus.SC_OK, response.getStatus());
 
     // Content-Type in response should be Smile
-    Assert.assertEquals(SmileMediaTypes.APPLICATION_JACKSON_SMILE, response.getContentType());
+    Assertions.assertEquals(SmileMediaTypes.APPLICATION_JACKSON_SMILE, response.getContentType());
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(1, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -901,10 +975,14 @@ public class QueryResourceTest
         smileMapper.writeValueAsBytes(jsonMapper.readTree(
             SIMPLE_TIMESERIES_QUERY))
     );
-    Assert.assertEquals(HttpStatus.SC_OK, response.getStatus());
+    Assertions.assertEquals(HttpStatus.SC_OK, response.getStatus());
 
     // Content-Type in response should be Smile
-    Assert.assertEquals(SmileMediaTypes.APPLICATION_JACKSON_SMILE, response.getContentType());
+    Assertions.assertEquals(SmileMediaTypes.APPLICATION_JACKSON_SMILE, response.getContentType());
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(1, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -920,10 +998,14 @@ public class QueryResourceTest
         testServletRequest,
         smileMapper.writeValueAsBytes(jsonMapper.readTree(SIMPLE_TIMESERIES_QUERY))
     );
-    Assert.assertEquals(HttpStatus.SC_OK, response.getStatus());
+    Assertions.assertEquals(HttpStatus.SC_OK, response.getStatus());
 
     // Content-Type in response should default to Content-Type from request
-    Assert.assertEquals(SmileMediaTypes.APPLICATION_JACKSON_SMILE, response.getContentType());
+    Assertions.assertEquals(SmileMediaTypes.APPLICATION_JACKSON_SMILE, response.getContentType());
+
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(1, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(200, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
   @Test
@@ -934,42 +1016,69 @@ public class QueryResourceTest
         null /*pretty*/,
         testServletRequest
     );
-    Assert.assertNotNull(response);
-    Assert.assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
     QueryException e = jsonMapper.readValue((byte[]) response.getEntity(), QueryException.class);
-    Assert.assertEquals(QueryException.JSON_PARSE_ERROR_CODE, e.getErrorCode());
-    Assert.assertEquals(BadJsonQueryException.ERROR_CLASS, e.getErrorClass());
+    Assertions.assertEquals(QueryException.JSON_PARSE_ERROR_CODE, e.getErrorCode());
+    Assertions.assertEquals(BadJsonQueryException.ERROR_CLASS, e.getErrorClass());
+  }
+
+  @Test
+  public void testIncompleteQuery() throws IOException
+  {
+    final Response response = queryResource.doPost(
+        new ByteArrayInputStream("{\"queryType\":\"scan\"}".getBytes(StandardCharsets.UTF_8)),
+        null /*pretty*/,
+        testServletRequest
+    );
+
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
+    final QueryException e = jsonMapper.readValue((byte[]) response.getEntity(), QueryException.class);
+    Assertions.assertEquals(QueryException.JSON_PARSE_ERROR_CODE, e.getErrorCode());
+    Assertions.assertEquals(ValueInstantiationException.class.getName(), e.getErrorClass());
+    Assertions.assertEquals("Invalid native query: dataSource can't be null", e.getMessage());
   }
 
   @Test
   public void testResourceLimitExceeded() throws IOException
   {
-    Response response = queryResource.doPost(
-        new ExceptionalInputStream(() -> new ResourceLimitExceededException("You require too much of something")),
-        null /*pretty*/,
-        testServletRequest
-    );
-    Assert.assertNotNull(response);
-    Assert.assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
+    final Response response;
+    try (final ExceptionalInputStream inputStream = new ExceptionalInputStream(
+        () -> new ResourceLimitExceededException("You require too much of something")
+    )) {
+      response = queryResource.doPost(
+          inputStream,
+          null /*pretty*/,
+          testServletRequest
+      );
+    }
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
     QueryException e = jsonMapper.readValue((byte[]) response.getEntity(), QueryException.class);
-    Assert.assertEquals(QueryException.RESOURCE_LIMIT_EXCEEDED_ERROR_CODE, e.getErrorCode());
-    Assert.assertEquals(ResourceLimitExceededException.class.getName(), e.getErrorClass());
+    Assertions.assertEquals(QueryException.RESOURCE_LIMIT_EXCEEDED_ERROR_CODE, e.getErrorCode());
+    Assertions.assertEquals(ResourceLimitExceededException.class.getName(), e.getErrorClass());
   }
 
   @Test
   public void testUnsupportedQueryThrowsException() throws IOException
   {
     String errorMessage = "This will be support in Druid 9999";
-    Response response = queryResource.doPost(
-        new ExceptionalInputStream(() -> new QueryUnsupportedException(errorMessage)),
-        null /*pretty*/,
-        testServletRequest
-    );
-    Assert.assertNotNull(response);
-    Assert.assertEquals(QueryUnsupportedException.STATUS_CODE, response.getStatus());
+    final Response response;
+    try (final ExceptionalInputStream inputStream = new ExceptionalInputStream(
+        () -> new QueryUnsupportedException(errorMessage)
+    )) {
+      response = queryResource.doPost(
+          inputStream,
+          null /*pretty*/,
+          testServletRequest
+      );
+    }
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(QueryUnsupportedException.STATUS_CODE, response.getStatus());
     QueryException ex = jsonMapper.readValue((byte[]) response.getEntity(), QueryException.class);
-    Assert.assertEquals(errorMessage, ex.getMessage());
-    Assert.assertEquals(QueryException.QUERY_UNSUPPORTED_ERROR_CODE, ex.getErrorCode());
+    Assertions.assertEquals(errorMessage, ex.getMessage());
+    Assertions.assertEquals(QueryException.QUERY_UNSUPPORTED_ERROR_CODE, ex.getErrorCode());
   }
 
   @Test
@@ -998,7 +1107,7 @@ public class QueryResourceTest
       }
     };
 
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             TEST_SEGMENT_WALKER,
@@ -1008,20 +1117,14 @@ public class QueryResourceTest
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             authMapper,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
+            new DefaultQueryConfig(Map.of()),
+            null
         ),
-        jsonMapper,
-        queryScheduler,
         authMapper,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
-        )
+        queryScheduler,
+        ResponseContextConfig.newConfig(true),
+        smileMapper,
+        new ServerConfig()
     );
 
 
@@ -1031,7 +1134,7 @@ public class QueryResourceTest
           null /*pretty*/,
           testServletRequest.mimic()
       );
-      Assert.fail("doPost did not throw ForbiddenException for an unauthorized query");
+      Assertions.fail("doPost did not throw ForbiddenException for an unauthorized query");
     }
     catch (ForbiddenException e) {
     }
@@ -1040,7 +1143,7 @@ public class QueryResourceTest
         "{\"queryType\":\"timeBoundary\", \"dataSource\":\"allow\"}",
         testServletRequest.mimic()
     );
-    Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
 
     final List<Result<TimeBoundaryResultValue>> responses = jsonMapper.readValue(
         response.baos.toByteArray(),
@@ -1049,13 +1152,13 @@ public class QueryResourceTest
         }
     );
 
-    Assert.assertEquals(0, responses.size());
-    Assert.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
-    Assert.assertEquals(
+    Assertions.assertEquals(0, responses.size());
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    Assertions.assertEquals(
         true,
         testRequestLogger.getNativeQuerylogs().get(0).getQueryStats().getStats().get("success")
     );
-    Assert.assertEquals(
+    Assertions.assertEquals(
         "druid",
         testRequestLogger.getNativeQuerylogs().get(0).getQueryStats().getStats().get("identity")
     );
@@ -1079,30 +1182,24 @@ public class QueryResourceTest
       }
     };
 
-    final QueryResource timeoutQueryResource = new QueryResource(
+    final QueryResource timeoutQueryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             timeoutSegmentWalker,
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
+            new DefaultQueryConfig(Map.of()),
+            null
         ),
-        jsonMapper,
-        queryScheduler,
         null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            jsonMapper
-        )
+        queryScheduler,
+        ResponseContextConfig.newConfig(true),
+        jsonMapper,
+        new ServerConfig()
     );
     expectPermissiveHappyPathAuth();
 
@@ -1111,31 +1208,34 @@ public class QueryResourceTest
         SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8),
         timeoutQueryResource
     );
-    Assert.assertEquals(QueryTimeoutException.STATUS_CODE, response.getStatus());
+    Assertions.assertEquals(QueryTimeoutException.STATUS_CODE, response.getStatus());
 
     ErrorResponse entity = (ErrorResponse) response.getEntity();
-    MatcherAssert.assertThat(
+    DruidExceptionMatcher.assertThat(
         entity.getUnderlyingException(),
         new DruidExceptionMatcher(
             DruidException.Persona.OPERATOR,
             DruidException.Category.TIMEOUT,
             "legacyQueryException"
+        ).expectMessageIs(
+            "Query did not complete within configured timeout period. You can increase query timeout or tune the performance of query."
         )
-            .expectMessageIs(
-                "Query did not complete within configured timeout period. You can increase query timeout or tune the performance of query.")
     );
 
     ByteArrayOutputStream baos = new ByteArrayOutputStream();
     jsonMapper.writeValue(baos, entity);
     QueryTimeoutException ex = jsonMapper.readValue(baos.toByteArray(), QueryTimeoutException.class);
-    Assert.assertEquals("Query did not complete within configured timeout period. You can " +
+    Assertions.assertEquals("Query did not complete within configured timeout period. You can " +
                         "increase query timeout or tune the performance of query.", ex.getMessage());
-    Assert.assertEquals(QueryException.QUERY_TIMEOUT_ERROR_CODE, ex.getErrorCode());
-    Assert.assertEquals(1, timeoutQueryResource.getTimedOutQueryCount());
+    Assertions.assertEquals(QueryException.QUERY_TIMEOUT_ERROR_CODE, ex.getErrorCode());
+    Assertions.assertEquals(1, timeoutQueryResource.getTimedOutQueryCount());
 
+    emitter.verifyEmitted("query/time", 1);
+    Assertions.assertEquals(504, emitter.getMetricEvents("query/time").get(0).toMap().get(DruidMetrics.STATUS_CODE));
   }
 
-  @Test(timeout = 60_000L)
+  @Test
+  @Timeout(value = 60_000L, unit = TimeUnit.MILLISECONDS, threadMode = ThreadMode.SEPARATE_THREAD)
   public void testSecuredCancelQuery() throws Exception
   {
     final CountDownLatch waitForCancellationLatch = new CountDownLatch(1);
@@ -1181,7 +1281,7 @@ public class QueryResourceTest
       }
     };
 
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             TEST_SEGMENT_WALKER,
@@ -1191,20 +1291,14 @@ public class QueryResourceTest
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             authMapper,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
+            new DefaultQueryConfig(Map.of()),
+            null
         ),
-        jsonMapper,
-        queryScheduler,
         authMapper,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
-        )
+        queryScheduler,
+        ResponseContextConfig.newConfig(true),
+        smileMapper,
+        new ServerConfig()
     );
 
     final String queryString = "{\"queryType\":\"timeBoundary\", \"dataSource\":\"allow\","
@@ -1242,7 +1336,7 @@ public class QueryResourceTest
     Executors.newSingleThreadExecutor().submit(
         () -> {
           Response response = queryResource.cancelQuery("id_1", testServletRequest);
-          Assert.assertEquals(Status.ACCEPTED.getStatusCode(), response.getStatus());
+          Assertions.assertEquals(Status.ACCEPTED.getStatusCode(), response.getStatus());
           waitForCancellationLatch.countDown();
           waitFinishLatch.countDown();
         }
@@ -1250,12 +1344,13 @@ public class QueryResourceTest
     waitFinishLatch.await();
     cancelledCountDownLatch.await();
 
-    Assert.assertTrue(future.isCancelled());
+    Assertions.assertTrue(future.isCancelled());
     final Response response = responseFromEndpoint.get();
-    Assert.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
   }
 
-  @Test(timeout = 60_000L)
+  @Test
+  @Timeout(value = 60_000L, unit = TimeUnit.MILLISECONDS, threadMode = ThreadMode.SEPARATE_THREAD)
   public void testDenySecuredCancelQuery() throws Exception
   {
     final CountDownLatch waitForCancellationLatch = new CountDownLatch(1);
@@ -1294,7 +1389,7 @@ public class QueryResourceTest
       }
     };
 
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             TEST_SEGMENT_WALKER,
@@ -1304,20 +1399,14 @@ public class QueryResourceTest
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             authMapper,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
+            new DefaultQueryConfig(Map.of()),
+            null
         ),
-        jsonMapper,
-        queryScheduler,
         authMapper,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
-        )
+        queryScheduler,
+        ResponseContextConfig.newConfig(true),
+        smileMapper,
+        new ServerConfig()
     );
 
     final String queryString = "{\"queryType\":\"timeBoundary\", \"dataSource\":\"allow\","
@@ -1365,10 +1454,11 @@ public class QueryResourceTest
     );
     waitFinishLatch.await();
 
-    Assert.assertEquals(Response.Status.OK.getStatusCode(), future.get().getStatus());
+    Assertions.assertEquals(Response.Status.OK.getStatusCode(), future.get().getStatus());
   }
 
-  @Test(timeout = 10_000L)
+  @Test
+  @Timeout(value = 10_000L, unit = TimeUnit.MILLISECONDS, threadMode = ThreadMode.SEPARATE_THREAD)
   public void testTooManyQuery() throws InterruptedException, ExecutionException
   {
     expectPermissiveHappyPathAuth();
@@ -1387,29 +1477,29 @@ public class QueryResourceTest
     createScheduledQueryResource(laningScheduler, Collections.emptyList(), ImmutableList.of(waitTwoScheduled));
     back2.add(eventuallyAssertAsyncResponse(
         SIMPLE_TIMESERIES_QUERY,
-        response -> Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
+        response -> Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
     ));
     back2.add(eventuallyAssertAsyncResponse(
         SIMPLE_TIMESERIES_QUERY,
-        response -> Assert.assertEquals(Status.OK.getStatusCode(), response.getStatus())
+        response -> Assertions.assertEquals(Status.OK.getStatusCode(), response.getStatus())
     ));
     waitTwoScheduled.await();
     back2.add(eventuallyaAssertSynchronousResponse(
         SIMPLE_TIMESERIES_QUERY,
         response -> {
-          Assert.assertEquals(QueryCapacityExceededException.STATUS_CODE, response.getStatus());
+          Assertions.assertEquals(QueryCapacityExceededException.STATUS_CODE, response.getStatus());
           QueryCapacityExceededException ex;
 
           final ErrorResponse entity = (ErrorResponse) response.getEntity();
-          MatcherAssert.assertThat(
+          DruidExceptionMatcher.assertThat(
               entity.getUnderlyingException(),
               new DruidExceptionMatcher(
                   DruidException.Persona.OPERATOR,
                   DruidException.Category.CAPACITY_EXCEEDED,
                   "legacyQueryException"
+              ).expectMessageIs(
+                  "Too many concurrent queries, total query capacity of 2 exceeded. Please try your query again later."
               )
-                  .expectMessageIs(
-                      "Too many concurrent queries, total query capacity of 2 exceeded. Please try your query again later.")
           );
 
           try {
@@ -1423,19 +1513,30 @@ public class QueryResourceTest
           catch (IOException e) {
             throw new RuntimeException(e);
           }
-          Assert.assertEquals(QueryCapacityExceededException.makeTotalErrorMessage(2), ex.getMessage());
-          Assert.assertEquals(QueryException.QUERY_CAPACITY_EXCEEDED_ERROR_CODE, ex.getErrorCode());
+          Assertions.assertEquals(QueryCapacityExceededException.makeTotalErrorMessage(2), ex.getMessage());
+          Assertions.assertEquals(QueryException.QUERY_CAPACITY_EXCEEDED_ERROR_CODE, ex.getErrorCode());
         }
     ));
 
     for (Future<Boolean> theFuture : back2) {
-      Assert.assertTrue(theFuture.get());
+      Assertions.assertTrue(theFuture.get());
     }
-    Assert.assertEquals(2, queryResource.getSuccessfulQueryCount());
-    Assert.assertEquals(1, queryResource.getFailedQueryCount());
+    Assertions.assertEquals(2, queryResource.getSuccessfulQueryCount());
+    Assertions.assertEquals(1, queryResource.getFailedQueryCount());
+
+    emitter.verifyEmitted("query/time", 3);
+    Map<Integer, Long> codeFrequencies = emitter.getMetricEvents("query/time").stream()
+                                                .map(ServiceMetricEvent::toMap)
+                                                .map(map -> (int) map.get(DruidMetrics.STATUS_CODE))
+                                                .collect(Collectors.groupingBy(
+                                                    code -> code,
+                                                    Collectors.counting()
+                                                ));
+    Assertions.assertEquals(Map.of(200, 2L, 429, 1L), codeFrequencies);
   }
 
-  @Test(timeout = 10_000L)
+  @Test
+  @Timeout(value = 10_000L, unit = TimeUnit.MILLISECONDS, threadMode = ThreadMode.SEPARATE_THREAD)
   public void testTooManyQueryInLane() throws InterruptedException, ExecutionException
   {
     expectPermissiveHappyPathAuth();
@@ -1454,25 +1555,25 @@ public class QueryResourceTest
 
     back2.add(eventuallyAssertAsyncResponse(
         SIMPLE_TIMESERIES_QUERY_LOW_PRIORITY,
-        response -> Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
+        response -> Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
     ));
     waitOneScheduled.await();
     back2.add(eventuallyaAssertSynchronousResponse(
         SIMPLE_TIMESERIES_QUERY_LOW_PRIORITY,
         response -> {
-          Assert.assertEquals(QueryCapacityExceededException.STATUS_CODE, response.getStatus());
+          Assertions.assertEquals(QueryCapacityExceededException.STATUS_CODE, response.getStatus());
           QueryCapacityExceededException ex;
 
           final ErrorResponse entity = (ErrorResponse) response.getEntity();
-          MatcherAssert.assertThat(
+          DruidExceptionMatcher.assertThat(
               entity.getUnderlyingException(),
               new DruidExceptionMatcher(
                   DruidException.Persona.OPERATOR,
                   DruidException.Category.CAPACITY_EXCEEDED,
                   "legacyQueryException"
+              ).expectMessageIs(
+                  "Too many concurrent queries for lane 'low', query capacity of 1 exceeded. Please try your query again later."
               )
-                  .expectMessageIs(
-                      "Too many concurrent queries for lane 'low', query capacity of 1 exceeded. Please try your query again later.")
           );
 
           try {
@@ -1486,26 +1587,37 @@ public class QueryResourceTest
           catch (IOException e) {
             throw new RuntimeException(e);
           }
-          Assert.assertEquals(
+          Assertions.assertEquals(
               QueryCapacityExceededException.makeLaneErrorMessage(HiLoQueryLaningStrategy.LOW, 1),
               ex.getMessage()
           );
-          Assert.assertEquals(QueryException.QUERY_CAPACITY_EXCEEDED_ERROR_CODE, ex.getErrorCode());
+          Assertions.assertEquals(QueryException.QUERY_CAPACITY_EXCEEDED_ERROR_CODE, ex.getErrorCode());
 
         }
     ));
     waitTwoStarted.await();
     back2.add(eventuallyAssertAsyncResponse(
         SIMPLE_TIMESERIES_QUERY,
-        response -> Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
+        response -> Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
     ));
 
     for (Future<Boolean> theFuture : back2) {
-      Assert.assertTrue(theFuture.get());
+      Assertions.assertTrue(theFuture.get());
     }
+
+    emitter.verifyEmitted("query/time", 3);
+    Map<Integer, Long> codeFrequencies = emitter.getMetricEvents("query/time").stream()
+                                                .map(ServiceMetricEvent::toMap)
+                                                .map(map -> (int) map.get(DruidMetrics.STATUS_CODE))
+                                                .collect(Collectors.groupingBy(
+                                                    code -> code,
+                                                    Collectors.counting()
+                                                ));
+    Assertions.assertEquals(Map.of(200, 2L, 429, 1L), codeFrequencies);
   }
 
-  @Test(timeout = 10_000L)
+  @Test
+  @Timeout(value = 10_000L, unit = TimeUnit.MILLISECONDS, threadMode = ThreadMode.SEPARATE_THREAD)
   public void testTooManyQueryInLaneImplicitFromDurationThreshold() throws InterruptedException, ExecutionException
   {
     expectPermissiveHappyPathAuth();
@@ -1523,25 +1635,25 @@ public class QueryResourceTest
 
     back2.add(eventuallyAssertAsyncResponse(
         SIMPLE_TIMESERIES_QUERY,
-        response -> Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
+        response -> Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
     ));
     waitOneScheduled.await();
     back2.add(eventuallyaAssertSynchronousResponse(
         SIMPLE_TIMESERIES_QUERY,
         response -> {
-          Assert.assertEquals(QueryCapacityExceededException.STATUS_CODE, response.getStatus());
+          Assertions.assertEquals(QueryCapacityExceededException.STATUS_CODE, response.getStatus());
           QueryCapacityExceededException ex;
 
           final ErrorResponse entity = (ErrorResponse) response.getEntity();
-          MatcherAssert.assertThat(
+          DruidExceptionMatcher.assertThat(
               entity.getUnderlyingException(),
               new DruidExceptionMatcher(
                   DruidException.Persona.OPERATOR,
                   DruidException.Category.CAPACITY_EXCEEDED,
                   "legacyQueryException"
+              ).expectMessageIs(
+                  "Too many concurrent queries for lane 'low', query capacity of 1 exceeded. Please try your query again later."
               )
-                  .expectMessageIs(
-                      "Too many concurrent queries for lane 'low', query capacity of 1 exceeded. Please try your query again later.")
           );
 
           try {
@@ -1555,22 +1667,31 @@ public class QueryResourceTest
           catch (IOException e) {
             throw new RuntimeException(e);
           }
-          Assert.assertEquals(
+          Assertions.assertEquals(
               QueryCapacityExceededException.makeLaneErrorMessage(HiLoQueryLaningStrategy.LOW, 1),
               ex.getMessage()
           );
-          Assert.assertEquals(QueryException.QUERY_CAPACITY_EXCEEDED_ERROR_CODE, ex.getErrorCode());
+          Assertions.assertEquals(QueryException.QUERY_CAPACITY_EXCEEDED_ERROR_CODE, ex.getErrorCode());
         }
     ));
     waitTwoStarted.await();
     back2.add(eventuallyAssertAsyncResponse(
         SIMPLE_TIMESERIES_QUERY_SMALLISH_INTERVAL,
-        response -> Assert.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
+        response -> Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus())
     ));
 
     for (Future<Boolean> theFuture : back2) {
-      Assert.assertTrue(theFuture.get());
+      Assertions.assertTrue(theFuture.get());
     }
+    emitter.verifyEmitted("query/time", 3);
+    Map<Integer, Long> codeFrequencies = emitter.getMetricEvents("query/time").stream()
+                                                .map(ServiceMetricEvent::toMap)
+                                                .map(map -> (int) map.get(DruidMetrics.STATUS_CODE))
+                                                .collect(Collectors.groupingBy(
+                                                    code -> code,
+                                                    Collectors.counting()
+                                                ));
+    Assertions.assertEquals(Map.of(200, 2L, 429, 1L), codeFrequencies);
   }
 
   @Test
@@ -1584,7 +1705,7 @@ public class QueryResourceTest
     writer.writeResponseEnd();
     writer.close();
 
-    Assert.assertEquals(
+    Assertions.assertEquals(
         ImmutableList.of(
             ImmutableList.of("foo", "bar"),
             ImmutableList.of("baz")
@@ -1602,15 +1723,12 @@ public class QueryResourceTest
     writer.writeRow(Arrays.asList("foo", "bar"));
     writer.close(); // Simulate an error that occurs midstream; close writer without calling writeResponseEnd.
 
-    final JsonProcessingException e = Assert.assertThrows(
+    final JsonProcessingException e = Assertions.assertThrows(
         JsonProcessingException.class,
         () -> jsonMapper.readValue(baos.toByteArray(), Object.class)
     );
 
-    MatcherAssert.assertThat(
-        e,
-        ThrowableMessageMatcher.hasMessage(CoreMatchers.containsString("expected close marker for Array"))
-    );
+    AssertionsForClassTypes.assertThat(e).hasMessageContaining("expected close marker for Array");
   }
 
   private void createScheduledQueryResource(
@@ -1654,30 +1772,24 @@ public class QueryResourceTest
       }
     };
 
-    queryResource = new QueryResource(
+    queryResource = createQueryResource(
         new QueryLifecycleFactory(
             CONGLOMERATE,
             texasRanger,
             new DefaultGenericQueryMetricsFactory(),
-            new NoopServiceEmitter(),
+            emitter,
             testRequestLogger,
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of()))
+            new DefaultQueryConfig(Map.of()),
+            null
         ),
-        jsonMapper,
-        scheduler,
         null,
-        new QueryResourceQueryResultPusherFactory(
-            jsonMapper,
-            ResponseContextConfig.newConfig(true),
-            DRUID_NODE
-        ),
-        new ResourceIOReaderWriterFactory(
-            jsonMapper,
-            smileMapper
-        )
+        scheduler,
+        ResponseContextConfig.newConfig(true),
+        smileMapper,
+        new ServerConfig()
     );
   }
 
@@ -1695,6 +1807,217 @@ public class QueryResourceTest
       }
       return true;
     });
+  }
+
+  @Test
+  public void testBlocklistedQueryReturnsForbidden() throws IOException
+  {
+    expectPermissiveHappyPathAuth();
+
+    final QueryResource blockingQueryResource = createQueryResourceWithBlocklist(
+        new ServerConfig(),
+        new DefaultQueryBlocklistRule("block-mmx", ImmutableSet.of("mmx_metrics"), null, null)
+    );
+
+    final Response response = blockingQueryResource.doPost(
+        new ByteArrayInputStream(SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
+        null /*pretty*/,
+        testServletRequest
+    );
+
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(Status.FORBIDDEN.getStatusCode(), response.getStatus());
+    Assertions.assertNotNull(response.getMetadata().getFirst(QueryResource.QUERY_ID_RESPONSE_HEADER));
+
+    DruidExceptionMatcher.assertThat(
+        ((ErrorResponse) response.getEntity()).getUnderlyingException(),
+        DruidExceptionMatcher.forbidden().expectMessageContains("blocked by rule[block-mmx]")
+    );
+
+    // Blocked queries are still recorded in metrics and the request log. FORBIDDEN maps to no query counter, the
+    // same as when the exception surfaces through QueryResultPusher.
+    Assertions.assertEquals(0, blockingQueryResource.getFailedQueryCount());
+    Assertions.assertEquals(0, blockingQueryResource.getInterruptedQueryCount());
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    final Map<String, Object> stats = testRequestLogger.getNativeQuerylogs().get(0).getQueryStats().getStats();
+    Assertions.assertEquals(false, stats.get("success"));
+    // The blocklist throws mid-authorization, so the identity is only present if it was recorded before that point.
+    Assertions.assertEquals(AUTHENTICATION_RESULT.getIdentity(), stats.get("identity"));
+    Assertions.assertEquals(Status.FORBIDDEN.getStatusCode(), stats.get(DruidMetrics.STATUS_CODE));
+  }
+
+  @Test
+  public void testBlocklistedQueryIsSanitizedByErrorResponseTransformStrategy() throws IOException
+  {
+    expectPermissiveHappyPathAuth();
+
+    // Always-transforming strategy, so the test does not depend on any particular strategy's persona rules.
+    final ErrorResponseTransformStrategy strategy = new ErrorResponseTransformStrategy()
+    {
+      @Override
+      public Optional<DruidException> maybeTransform(DruidException exception, Optional<String> errorId)
+      {
+        return Optional.of(
+            DruidException.forPersona(DruidException.Persona.USER)
+                          .ofCategory(DruidException.Category.RUNTIME_FAILURE)
+                          .build("sanitized[%s]", errorId.orElse(null))
+        );
+      }
+
+      @Override
+      public Function<String, String> getErrorMessageTransformFunction()
+      {
+        throw new UnsupportedOperationException();
+      }
+    };
+
+    final QueryResource blockingQueryResource = createQueryResourceWithBlocklist(
+        new ServerConfig(strategy),
+        new DefaultQueryBlocklistRule("block-mmx", ImmutableSet.of("mmx_metrics"), null, null)
+    );
+
+    final Response response = blockingQueryResource.doPost(
+        new ByteArrayInputStream(SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
+        null /*pretty*/,
+        testServletRequest
+    );
+
+    Assertions.assertNotNull(response);
+    // The transformed exception's own category now drives the status code, not the original FORBIDDEN.
+    Assertions.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
+
+    final Object queryId = response.getMetadata().getFirst(QueryResource.QUERY_ID_RESPONSE_HEADER);
+    Assertions.assertNotNull(queryId);
+    DruidExceptionMatcher.assertThat(
+        ((ErrorResponse) response.getEntity()).getUnderlyingException(),
+        new DruidExceptionMatcher(
+            DruidException.Persona.USER,
+            DruidException.Category.RUNTIME_FAILURE,
+            "general"
+        ).expectMessageIs(StringUtils.format("sanitized[%s]", queryId))
+    );
+
+    // Sanitization applies to the client response only; the request log keeps the original 403.
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    Assertions.assertEquals(
+        Status.FORBIDDEN.getStatusCode(),
+        testRequestLogger.getNativeQuerylogs().get(0).getQueryStats().getStats().get(DruidMetrics.STATUS_CODE)
+    );
+  }
+
+  @Test
+  public void testDruidExceptionFromAuthorizeIsCountedByCategory() throws IOException
+  {
+    expectPermissiveHappyPathAuth();
+
+    final QueryLifecycleFactory realFactory = createQueryLifecycleFactory();
+    final QueryLifecycleFactory failingFactory = Mockito.mock(QueryLifecycleFactory.class);
+    Mockito.when(failingFactory.factorize()).thenAnswer(invocation -> {
+      final QueryLifecycle lifecycle = Mockito.spy(realFactory.factorize());
+      // DEFENSIVE maps to the "failed" counter, unlike the FORBIDDEN thrown by the blocklist.
+      Mockito.doThrow(DruidException.defensive("oh no"))
+             .when(lifecycle)
+             .authorize(ArgumentMatchers.any(HttpServletRequest.class));
+      return lifecycle;
+    });
+
+    final QueryResource failingQueryResource = createQueryResource(failingFactory);
+
+    final Response response = failingQueryResource.doPost(
+        new ByteArrayInputStream(SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
+        null /*pretty*/,
+        testServletRequest
+    );
+
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
+    Assertions.assertEquals(1, failingQueryResource.getFailedQueryCount());
+    Assertions.assertEquals(0, failingQueryResource.getInterruptedQueryCount());
+  }
+
+  @Test
+  public void testQueryExceptionFromAuthorizeIsRecorded() throws IOException
+  {
+    expectPermissiveHappyPathAuth();
+
+    final QueryLifecycleFactory realFactory = createQueryLifecycleFactory();
+    final QueryLifecycleFactory failingFactory = Mockito.mock(QueryLifecycleFactory.class);
+    Mockito.when(failingFactory.factorize()).thenAnswer(invocation -> {
+      final QueryLifecycle lifecycle = Mockito.spy(realFactory.factorize());
+      Mockito.doThrow(QueryCapacityExceededException.withErrorMessageAndResolvedHost("too busy"))
+             .when(lifecycle)
+             .authorize(ArgumentMatchers.any(HttpServletRequest.class));
+      return lifecycle;
+    });
+
+    final QueryResource failingQueryResource = createQueryResource(failingFactory);
+
+    final Response response = failingQueryResource.doPost(
+        new ByteArrayInputStream(SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8)),
+        null /*pretty*/,
+        testServletRequest
+    );
+
+    // A QueryException keeps its own status and its legacy response body.
+    Assertions.assertNotNull(response);
+    Assertions.assertEquals(429, response.getStatus());
+    AssertionsForClassTypes.assertThat(StringUtils.fromUtf8((byte[]) response.getEntity())).contains("too busy");
+
+    // It now shares the DruidException path, so the failure is recorded server-side and not just returned.
+    Assertions.assertEquals(1, failingQueryResource.getFailedQueryCount());
+    Assertions.assertEquals(1, testRequestLogger.getNativeQuerylogs().size());
+    final Map<String, Object> stats = testRequestLogger.getNativeQuerylogs().get(0).getQueryStats().getStats();
+    Assertions.assertEquals(false, stats.get("success"));
+    Assertions.assertEquals(429, stats.get(DruidMetrics.STATUS_CODE));
+  }
+
+  @Test
+  public void testNonBlocklistedQueryIsNotAffectedByBlocklist() throws IOException
+  {
+    expectPermissiveHappyPathAuth();
+
+    final QueryResource blockingQueryResource = createQueryResourceWithBlocklist(
+        new ServerConfig(),
+        new DefaultQueryBlocklistRule("block-other", ImmutableSet.of("some_other_datasource"), null, null)
+    );
+
+    final MockHttpServletResponse response = expectAsyncRequestFlow(
+        testServletRequest,
+        SIMPLE_TIMESERIES_QUERY.getBytes(StandardCharsets.UTF_8),
+        blockingQueryResource
+    );
+
+    Assertions.assertEquals(Status.OK.getStatusCode(), response.getStatus());
+  }
+
+  private QueryResource createQueryResourceWithBlocklist(ServerConfig serverConfig, QueryBlocklistRule... rules)
+  {
+    final BrokerDynamicConfig dynamicConfig =
+        new BrokerDynamicConfig.Builder().withQueryBlocklist(Arrays.asList(rules)).build();
+    final BrokerViewOfBrokerConfig brokerViewOfBrokerConfig = Mockito.mock(BrokerViewOfBrokerConfig.class);
+    Mockito.when(brokerViewOfBrokerConfig.getDynamicConfig()).thenReturn(dynamicConfig);
+    Mockito.when(brokerViewOfBrokerConfig.snapshotForQuery())
+           .thenReturn(new QueryConfigSnapshot(Map.of(), dynamicConfig));
+
+    return createQueryResource(
+        new QueryLifecycleFactory(
+            CONGLOMERATE,
+            TEST_SEGMENT_WALKER,
+            new DefaultGenericQueryMetricsFactory(),
+            emitter,
+            testRequestLogger,
+            new AuthConfig(),
+            NoopPolicyEnforcer.instance(),
+            AuthTestUtils.TEST_AUTHORIZER_MAPPER,
+            new DefaultQueryConfig(Map.of()),
+            brokerViewOfBrokerConfig
+        ),
+        null,
+        queryScheduler,
+        ResponseContextConfig.newConfig(true),
+        smileMapper,
+        serverConfig
+    );
   }
 
   private void expectPermissiveHappyPathAuth()
@@ -1735,7 +2058,7 @@ public class QueryResourceTest
   {
     final MockHttpServletResponse response = MockHttpServletResponse.forRequest(req);
 
-    Assert.assertNull(queryResource.doPost(
+    Assertions.assertNull(queryResource.doPost(
         new ByteArrayInputStream(queryBytes),
         null /*pretty*/,
         req
@@ -1781,30 +2104,5 @@ public class QueryResourceTest
   ) throws IOException
   {
     return queryResource.doPost(new ByteArrayInputStream(bytes), null, req);
-  }
-
-  private org.eclipse.jetty.server.Response jettyResponseforRequest(MockHttpServletRequest req) throws IOException
-  {
-    HttpChannel channelMock = EasyMock.mock(HttpChannel.class);
-    HttpOutput outputMock = EasyMock.mock(HttpOutput.class);
-    org.eclipse.jetty.server.Response response = new org.eclipse.jetty.server.Response(channelMock, outputMock);
-
-    EasyMock.expect(channelMock.isSendError()).andReturn(false);
-    EasyMock.expect(channelMock.isCommitted()).andReturn(true);
-
-    outputMock.close();
-    EasyMock.expectLastCall().andVoid();
-
-    outputMock.write(EasyMock.anyObject(byte[].class), EasyMock.anyInt(), EasyMock.anyInt());
-    EasyMock.expectLastCall().andVoid();
-
-    EasyMock.replay(outputMock, channelMock);
-
-    req.newAsyncContext(() -> {
-      final MockAsyncContext retVal = new MockAsyncContext();
-      retVal.response = response;
-      return retVal;
-    });
-    return response;
   }
 }
